@@ -15,7 +15,6 @@ import static org.mockito.MockitoAnnotations.openMocks;
 import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.AGREE_LESS_HEARING_NOTICE;
 import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.APPEAL_LATE_REASON;
 import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.APPEAL_REASON;
-import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.APPELLANT_ADDRESS_COUNTRY;
 import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.APPELLANT_ADDRESS_LINE1;
 import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.APPELLANT_ADDRESS_LINE2;
 import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.APPELLANT_ADDRESS_LINE3;
@@ -23,17 +22,10 @@ import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.APPELLANT_ADDR
 import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.APPELLANT_DATE_OF_BIRTH;
 import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.APPELLANT_EMAIL;
 import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.APPELLANT_FIRST_NAME;
-import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.APPELLANT_IBCA_REFERENCE;
-import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.APPELLANT_IBC_ROLE_FOR_DECEASED;
-import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.APPELLANT_IBC_ROLE_FOR_LACKING_CAPACITY;
-import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.APPELLANT_IBC_ROLE_FOR_POA;
-import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.APPELLANT_IBC_ROLE_FOR_SELF;
-import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.APPELLANT_IBC_ROLE_FOR_U18;
 import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.APPELLANT_LAST_NAME;
 import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.APPELLANT_MOBILE;
 import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.APPELLANT_NINO;
 import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.APPELLANT_PHONE;
-import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.APPELLANT_PORT_OF_ENTRY;
 import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.APPELLANT_POSTCODE;
 import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.APPELLANT_TITLE;
 import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.APPOINTEE_ADDRESS_LINE1;
@@ -88,7 +80,6 @@ import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.REPRESENTATIVE
 import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.SIGNATURE_NAME;
 import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.SIGN_LANGUAGE_REQUIRED;
 import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.SIGN_LANGUAGE_TYPE;
-import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.SSCS8_FORM_TYPE;
 import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.APPEAL_GROUNDS;
 import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.APPEAL_GROUNDS_2;
 import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.BENEFIT_TYPE_OTHER;
@@ -106,11 +97,6 @@ import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.HEARING_
 import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.HEARING_TYPE_TELEPHONE_LITERAL;
 import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.HEARING_TYPE_VIDEO_LITERAL;
 import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.HEARING_VIDEO_EMAIL_LITERAL;
-import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.IBC_ROLE_FOR_DECEASED;
-import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.IBC_ROLE_FOR_LACKING_CAPACITY;
-import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.IBC_ROLE_FOR_POA;
-import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.IBC_ROLE_FOR_SELF;
-import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.IBC_ROLE_FOR_U18;
 import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.ISSUING_OFFICE;
 import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.IS_BENEFIT_TYPE_OTHER;
 import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.IS_BENEFIT_TYPE_TAX_CREDIT;
@@ -129,7 +115,6 @@ import static uk.gov.hmcts.reform.sscs.ccd.domain.Benefit.PIP;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.FormType.SSCS1PEU;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.FormType.SSCS2;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.FormType.SSCS5;
-import static uk.gov.hmcts.reform.sscs.ccd.domain.FormType.SSCS8;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.State.READY_TO_LIST;
 import static uk.gov.hmcts.reform.sscs.ccd.service.SscsCcdConvertService.normaliseNino;
 
@@ -354,7 +339,7 @@ public class SscsCaseTransformerTest {
         pairs.put(BenefitTypeIndicator.PIP.getIndicatorString(), true);
         CaseResponse result = transformer.transformExceptionRecord(exceptionRecord, false);
         assertFalse(result.getErrors().isEmpty());
-        assertEquals("is_benefit_type_pip and is_benefit_type_esa have contradicting values", result.getErrors().getFirst());
+        assertEquals("is_benefit_type_pip and is_benefit_type_esa have contradicting values", result.getErrors().get(0));
     }
 
     @Test
@@ -369,7 +354,7 @@ public class SscsCaseTransformerTest {
         pairs.put(BenefitTypeIndicatorSscs5.NATIONAL_INSURANCE_CREDITS.getIndicatorString(), true);
         CaseResponse result = transformer.transformExceptionRecord(sscs5ExceptionRecord, false);
         assertFalse(result.getErrors().isEmpty());
-        assertEquals("is_benefit_type_tax_credit, is_benefit_type_guardians_allowance, is_benefit_type_tax_free_childcare, is_benefit_type_home_responsibilities_protection, is_benefit_type_child_benefit, is_benefit_type_30_hours_tax_free_childcare, is_benefit_type_guaranteed_minimum_pension and is_benefit_type_national_insurance_credits have contradicting values", result.getErrors().getFirst());
+        assertEquals("is_benefit_type_tax_credit, is_benefit_type_guardians_allowance, is_benefit_type_tax_free_childcare, is_benefit_type_home_responsibilities_protection, is_benefit_type_child_benefit, is_benefit_type_30_hours_tax_free_childcare, is_benefit_type_guaranteed_minimum_pension and is_benefit_type_national_insurance_credits have contradicting values", result.getErrors().get(0));
     }
 
     @Test
@@ -384,7 +369,7 @@ public class SscsCaseTransformerTest {
         pairs.put(BenefitTypeIndicatorSscs5.NATIONAL_INSURANCE_CREDITS.getIndicatorString(), false);
         CaseResponse result = transformer.transformExceptionRecord(sscs5ExceptionRecord, false);
         assertEquals(1, result.getErrors().size());
-        assertEquals("is_benefit_type_tax_credit and is_benefit_type_guardians_allowance have contradicting values", result.getErrors().getFirst());
+        assertEquals("is_benefit_type_tax_credit and is_benefit_type_guardians_allowance have contradicting values", result.getErrors().get(0));
     }
 
     @Test
@@ -399,14 +384,14 @@ public class SscsCaseTransformerTest {
         pairs.put(BenefitTypeIndicatorSscs5.NATIONAL_INSURANCE_CREDITS.getIndicatorString(), false);
         CaseResponse result = transformer.transformExceptionRecord(sscs5ExceptionRecord, false);
         assertEquals(1, result.getErrors().size());
-        assertEquals("is_benefit_type_tax_credit, is_benefit_type_guardians_allowance, is_benefit_type_tax_free_childcare, is_benefit_type_home_responsibilities_protection, is_benefit_type_child_benefit, is_benefit_type_30_hours_tax_free_childcare, is_benefit_type_guaranteed_minimum_pension and is_benefit_type_national_insurance_credits fields are empty or false", result.getErrors().getFirst());
+        assertEquals("is_benefit_type_tax_credit, is_benefit_type_guardians_allowance, is_benefit_type_tax_free_childcare, is_benefit_type_home_responsibilities_protection, is_benefit_type_child_benefit, is_benefit_type_30_hours_tax_free_childcare, is_benefit_type_guaranteed_minimum_pension and is_benefit_type_national_insurance_credits fields are empty or false", result.getErrors().get(0));
     }
 
     @Test
     public void givenAllSscs5BenefitTypesAreMissing_thenReturnAnError() {
         CaseResponse result = transformer.transformExceptionRecord(sscs5ExceptionRecord, false);
         assertEquals(1, result.getErrors().size());
-        assertEquals("is_benefit_type_tax_credit, is_benefit_type_guardians_allowance, is_benefit_type_tax_free_childcare, is_benefit_type_home_responsibilities_protection, is_benefit_type_child_benefit, is_benefit_type_30_hours_tax_free_childcare, is_benefit_type_guaranteed_minimum_pension and is_benefit_type_national_insurance_credits fields are empty or false", result.getErrors().getFirst());
+        assertEquals("is_benefit_type_tax_credit, is_benefit_type_guardians_allowance, is_benefit_type_tax_free_childcare, is_benefit_type_home_responsibilities_protection, is_benefit_type_child_benefit, is_benefit_type_30_hours_tax_free_childcare, is_benefit_type_guaranteed_minimum_pension and is_benefit_type_national_insurance_credits fields are empty or false", result.getErrors().get(0));
     }
 
     @Test
@@ -417,7 +402,7 @@ public class SscsCaseTransformerTest {
         pairs.put(BenefitTypeIndicatorSscs1U.OTHER.getIndicatorString(), false);
         CaseResponse result = transformer.transformExceptionRecord(sscs1UExceptionRecord, false);
         assertEquals(1, result.getErrors().size());
-        assertEquals("is_benefit_type_pip, is_benefit_type_esa, is_benefit_type_uc and benefit_type_other fields are empty", result.getErrors().getFirst());
+        assertEquals("is_benefit_type_pip, is_benefit_type_esa, is_benefit_type_uc and benefit_type_other fields are empty", result.getErrors().get(0));
     }
 
     @Test
@@ -429,7 +414,7 @@ public class SscsCaseTransformerTest {
         pairs.put(BenefitTypeIndicatorSscs1U.OTHER.getIndicatorString(), false);
         CaseResponse result = transformer.transformExceptionRecord(sscs1UExceptionRecord, false);
         assertEquals(1, result.getErrors().size());
-        assertEquals("is_benefit_type_pip, is_benefit_type_esa, is_benefit_type_uc and benefit_type_other fields are empty", result.getErrors().getFirst());
+        assertEquals("is_benefit_type_pip, is_benefit_type_esa, is_benefit_type_uc and benefit_type_other fields are empty", result.getErrors().get(0));
     }
 
     @Test
@@ -540,7 +525,7 @@ public class SscsCaseTransformerTest {
         pairs.put(BENEFIT_TYPE_OTHER, "Not a valid type");
         CaseResponse result = transformer.transformExceptionRecord(sscs1UExceptionRecord, false);
         assertEquals(1, result.getErrors().size());
-        assertEquals("benefit_type_other is invalid", result.getErrors().getFirst());
+        assertEquals("benefit_type_other is invalid", result.getErrors().get(0));
     }
 
     @Test
@@ -551,7 +536,7 @@ public class SscsCaseTransformerTest {
         pairs.put(BenefitTypeIndicatorSscs1U.OTHER.getIndicatorString(), true);
         CaseResponse result = transformer.transformExceptionRecord(sscs1UExceptionRecord, false);
         assertEquals(1, result.getErrors().size());
-        assertEquals("benefit_type_other is invalid", result.getErrors().getFirst());
+        assertEquals("benefit_type_other is invalid", result.getErrors().get(0));
     }
 
     @Test
@@ -563,7 +548,7 @@ public class SscsCaseTransformerTest {
 
         CaseResponse result = transformer.transformExceptionRecord(sscs1UExceptionRecord, false);
         assertEquals(1, result.getErrors().size());
-        assertEquals("is_benefit_type_pip and benefit_type_other have contradicting values", result.getErrors().getFirst());
+        assertEquals("is_benefit_type_pip and benefit_type_other have contradicting values", result.getErrors().get(0));
     }
 
     @Test
@@ -574,7 +559,7 @@ public class SscsCaseTransformerTest {
         pairs.put(BENEFIT_TYPE_OTHER, "Attendance Allowance");
         CaseResponse result = transformer.transformExceptionRecord(sscs1UExceptionRecord, false);
         assertEquals(1, result.getErrors().size());
-        assertEquals("is_benefit_type_pip and benefit_type_other have contradicting values", result.getErrors().getFirst());
+        assertEquals("is_benefit_type_pip and benefit_type_other have contradicting values", result.getErrors().get(0));
     }
 
     @Test
@@ -586,7 +571,7 @@ public class SscsCaseTransformerTest {
         pairs.put(BenefitTypeIndicatorSscs1U.UC.getIndicatorString(), "Yes");
         CaseResponse result = transformer.transformExceptionRecord(sscs1UExceptionRecord, false);
         assertEquals(1, result.getErrors().size());
-        assertEquals("is_benefit_type_esa, is_benefit_type_uc and is_benefit_type_other have contradicting values", result.getErrors().getFirst());
+        assertEquals("is_benefit_type_esa, is_benefit_type_uc and is_benefit_type_other have contradicting values", result.getErrors().get(0));
     }
 
     @Test
@@ -598,7 +583,7 @@ public class SscsCaseTransformerTest {
         pairs.put(BenefitTypeIndicatorSscs1U.UC.getIndicatorString(), true);
         CaseResponse result = transformer.transformExceptionRecord(sscs1UExceptionRecord, false);
         assertEquals(1, result.getErrors().size());
-        assertEquals("is_benefit_type_esa, is_benefit_type_uc and is_benefit_type_other have contradicting values", result.getErrors().getFirst());
+        assertEquals("is_benefit_type_esa, is_benefit_type_uc and is_benefit_type_other have contradicting values", result.getErrors().get(0));
     }
 
     @Test
@@ -641,7 +626,6 @@ public class SscsCaseTransformerTest {
             .town("town")
             .county("county")
             .postcode(APPELLANT_POSTCODE)
-
             .build();
         for (String person : Arrays.asList("person1", personType)) {
             pairs.put(person + "_address_line1", expectedAddress.getLine1());
@@ -666,7 +650,6 @@ public class SscsCaseTransformerTest {
             .town("town")
             .county(".")
             .postcode(APPELLANT_POSTCODE)
-
             .build();
         for (String person : Arrays.asList("person1", personType)) {
             pairs.remove(person + "_address_line4");
@@ -691,7 +674,6 @@ public class SscsCaseTransformerTest {
             .town("town")
             .county(".")
             .postcode(APPELLANT_POSTCODE)
-
             .build();
         for (String person : Arrays.asList("person1", personType)) {
             pairs.remove(person + "_address_line4");
@@ -716,7 +698,6 @@ public class SscsCaseTransformerTest {
             .town(null)
             .county(null)
             .postcode(APPELLANT_POSTCODE)
-
             .build();
         for (String person : Arrays.asList("person1", personType)) {
             pairs.remove(person + "_address_line4");
@@ -742,7 +723,6 @@ public class SscsCaseTransformerTest {
             .town(null)
             .county("county")
             .postcode(APPELLANT_POSTCODE)
-
             .build();
         for (String person : Arrays.asList("person1", personType)) {
             pairs.put(person + "_address_line1", expectedAddress.getLine1());
@@ -872,101 +852,6 @@ public class SscsCaseTransformerTest {
         assertEquals(CASE_CODE, result.getTransformedCase().get("caseCode"));
         assertEquals(DWP_REGIONAL_CENTRE, result.getTransformedCase().get("dwpRegionalCentre"));
 
-        assertTrue(result.getErrors().isEmpty());
-    }
-
-    @Test
-    public void givenSscs8IbcInUk_thenBuildAnAppealWithIbcRoleAndIbcaReference() {
-        pairs.put("person1_title", APPELLANT_TITLE);
-        pairs.put("person1_first_name", APPELLANT_FIRST_NAME);
-        pairs.put("person1_last_name", APPELLANT_LAST_NAME);
-        pairs.put("person1_address_line1", APPELLANT_ADDRESS_LINE1);
-        pairs.put("person1_address_line2", APPELLANT_ADDRESS_LINE2);
-        pairs.put("person1_address_line3", APPELLANT_ADDRESS_LINE3);
-        pairs.put("person1_address_line4", APPELLANT_ADDRESS_LINE4);
-        pairs.put("person1_Country", APPELLANT_ADDRESS_COUNTRY);
-        pairs.put("person1_postcode", APPELLANT_POSTCODE);
-        pairs.put("person1_phone", APPELLANT_PHONE);
-        pairs.put("person1_mobile", APPELLANT_MOBILE);
-        pairs.put("person1_dob", APPELLANT_DATE_OF_BIRTH);
-        pairs.put("person1_email", APPELLANT_EMAIL);
-        pairs.put(APPEAL_GROUNDS, APPEAL_REASON);
-        pairs.put("person1_ibca_reference", APPELLANT_IBCA_REFERENCE);
-        pairs.put(IBC_ROLE_FOR_SELF, true);
-        pairs.put("form_type", SSCS8_FORM_TYPE);
-
-        CaseResponse result = transformer.transformExceptionRecord(exceptionRecord, false);
-
-        assertEquals(SSCS8, result.getTransformedCase().get("formType"));
-        Appeal transformedAppeal = (Appeal) result.getTransformedCase().get("appeal");
-        assertNotNull(transformedAppeal);
-        assertEquals(APPELLANT_IBC_ROLE_FOR_SELF, transformedAppeal.getAppellant().getIbcRole());
-        assertEquals(APPELLANT_IBCA_REFERENCE, transformedAppeal.getAppellant().getIdentity().getIbcaReference());
-        Address address = transformedAppeal.getAppellant().getAddress();
-        assertNotNull(address);
-        Address expectedAddress = Address.builder().line1(APPELLANT_ADDRESS_LINE1).line2(APPELLANT_ADDRESS_LINE2).town(APPELLANT_ADDRESS_LINE3).county(APPELLANT_ADDRESS_LINE4).postcode(APPELLANT_POSTCODE).inMainlandUk(YesNo.YES).build();
-        assertEquals(expectedAddress, address);
-        assertTrue(result.getErrors().isEmpty());
-    }
-
-    @Test
-    public void givenPortOfEntry_thenBuildAnAppealWithAddressWithCountryPortOfEntryWithoutCounty() {
-        pairs.put("person1_address_line1", APPELLANT_ADDRESS_LINE1);
-        pairs.put("person1_address_line2", APPELLANT_ADDRESS_LINE2);
-        pairs.put("person1_address_line3", APPELLANT_ADDRESS_LINE3);
-        pairs.put("person1_address_line4", APPELLANT_ADDRESS_LINE4);
-        pairs.put("person1_Country", APPELLANT_ADDRESS_COUNTRY);
-        pairs.put("person1_port_of_entry", APPELLANT_PORT_OF_ENTRY);
-        pairs.put("person1_postcode", APPELLANT_POSTCODE);
-        pairs.put("person1_ibca_reference", APPELLANT_IBCA_REFERENCE);
-        pairs.put(IBC_ROLE_FOR_SELF, true);
-        pairs.put("form_type", SSCS8_FORM_TYPE);
-
-        CaseResponse result = transformer.transformExceptionRecord(exceptionRecord, false);
-
-        assertEquals(SSCS8, result.getTransformedCase().get("formType"));
-        Appeal transformedAppeal = (Appeal) result.getTransformedCase().get("appeal");
-        assertNotNull(transformedAppeal);
-        assertEquals(APPELLANT_IBC_ROLE_FOR_SELF, transformedAppeal.getAppellant().getIbcRole());
-        assertEquals(APPELLANT_IBCA_REFERENCE, transformedAppeal.getAppellant().getIdentity().getIbcaReference());
-        Address address = transformedAppeal.getAppellant().getAddress();
-        assertNotNull(address);
-        Address expectedAddress = Address.builder().line1(APPELLANT_ADDRESS_LINE1).line2(APPELLANT_ADDRESS_LINE2).town(APPELLANT_ADDRESS_LINE3).country(APPELLANT_ADDRESS_COUNTRY).postcode(APPELLANT_POSTCODE).portOfEntry(APPELLANT_PORT_OF_ENTRY).inMainlandUk(YesNo.NO).build();
-        assertEquals(expectedAddress, address);
-        assertTrue(result.getErrors().isEmpty());
-    }
-
-    @Test
-    @Parameters({
-        IBC_ROLE_FOR_SELF + "," + APPELLANT_IBC_ROLE_FOR_SELF,
-        IBC_ROLE_FOR_U18 + "," + APPELLANT_IBC_ROLE_FOR_U18,
-        IBC_ROLE_FOR_DECEASED + "," + APPELLANT_IBC_ROLE_FOR_DECEASED,
-        IBC_ROLE_FOR_POA + "," + APPELLANT_IBC_ROLE_FOR_POA,
-        IBC_ROLE_FOR_LACKING_CAPACITY + "," + APPELLANT_IBC_ROLE_FOR_LACKING_CAPACITY
-    })
-    public void givenChosenIbcRole_thenBuildAnAppealWithIbcRoleSet(String ibcRoleBoolean, String ibcRoleValue) {
-        pairs.put("person1_address_line1", APPELLANT_ADDRESS_LINE1);
-        pairs.put("person1_address_line2", APPELLANT_ADDRESS_LINE2);
-        pairs.put("person1_address_line3", APPELLANT_ADDRESS_LINE3);
-        pairs.put("person1_address_line4", APPELLANT_ADDRESS_LINE4);
-        pairs.put("person1_Country", APPELLANT_ADDRESS_COUNTRY);
-        pairs.put("person1_port_of_entry", APPELLANT_PORT_OF_ENTRY);
-        pairs.put("person1_postcode", APPELLANT_POSTCODE);
-        pairs.put("person1_ibca_reference", APPELLANT_IBCA_REFERENCE);
-        pairs.put(ibcRoleBoolean, true);
-        pairs.put("form_type", SSCS8_FORM_TYPE);
-
-        CaseResponse result = transformer.transformExceptionRecord(exceptionRecord, false);
-
-        assertEquals(SSCS8, result.getTransformedCase().get("formType"));
-        Appeal transformedAppeal = (Appeal) result.getTransformedCase().get("appeal");
-        assertNotNull(transformedAppeal);
-        assertEquals(ibcRoleValue, transformedAppeal.getAppellant().getIbcRole());
-        assertEquals(APPELLANT_IBCA_REFERENCE, transformedAppeal.getAppellant().getIdentity().getIbcaReference());
-        Address address = transformedAppeal.getAppellant().getAddress();
-        assertNotNull(address);
-        Address expectedAddress = Address.builder().line1(APPELLANT_ADDRESS_LINE1).line2(APPELLANT_ADDRESS_LINE2).town(APPELLANT_ADDRESS_LINE3).country(APPELLANT_ADDRESS_COUNTRY).postcode(APPELLANT_POSTCODE).portOfEntry(APPELLANT_PORT_OF_ENTRY).inMainlandUk(YesNo.NO).build();
-        assertEquals(expectedAddress, address);
         assertTrue(result.getErrors().isEmpty());
     }
 
@@ -1322,7 +1207,7 @@ public class SscsCaseTransformerTest {
 
         CaseResponse result = transformer.transformExceptionRecord(exceptionRecord, false);
 
-        assertEquals("hearingLoop", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getArrangements().getFirst());
+        assertEquals("hearingLoop", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getArrangements().get(0));
         assertEquals("Yes", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getWantsSupport());
 
         assertTrue(result.getErrors().isEmpty());
@@ -1346,7 +1231,7 @@ public class SscsCaseTransformerTest {
 
         CaseResponse result = transformer.transformExceptionRecord(exceptionRecord, false);
 
-        assertEquals("hearingLoop", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getArrangements().getFirst());
+        assertEquals("hearingLoop", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getArrangements().get(0));
 
         assertTrue(result.getErrors().isEmpty());
     }
@@ -1373,7 +1258,7 @@ public class SscsCaseTransformerTest {
 
         CaseResponse result = transformer.transformExceptionRecord(exceptionRecord, false);
 
-        assertEquals("disabledAccess", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getArrangements().getFirst());
+        assertEquals("disabledAccess", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getArrangements().get(0));
         assertTrue(result.getErrors().isEmpty());
     }
 
@@ -1397,7 +1282,7 @@ public class SscsCaseTransformerTest {
 
         CaseResponse result = transformer.transformExceptionRecord(exceptionRecord, false);
 
-        assertEquals("2030-12-01", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getExcludeDates().getFirst().getValue().getStart());
+        assertEquals("2030-12-01", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getExcludeDates().get(0).getValue().getStart());
         assertEquals(YES_LITERAL, ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getScheduleHearing());
 
         assertTrue(result.getErrors().isEmpty());
@@ -1410,7 +1295,7 @@ public class SscsCaseTransformerTest {
 
         CaseResponse result = transformer.transformExceptionRecord(exceptionRecord, false);
 
-        assertEquals("2030-12-01", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getExcludeDates().getFirst().getValue().getStart());
+        assertEquals("2030-12-01", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getExcludeDates().get(0).getValue().getStart());
         assertEquals(YES_LITERAL, ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getWantsToAttend());
 
         assertTrue(result.getErrors().isEmpty());
@@ -1453,7 +1338,7 @@ public class SscsCaseTransformerTest {
 
         CaseResponse result = transformer.transformExceptionRecord(exceptionRecord, false);
 
-        assertEquals("2030-12-01", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getExcludeDates().getFirst().getValue().getStart());
+        assertEquals("2030-12-01", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getExcludeDates().get(0).getValue().getStart());
         assertEquals(NO_LITERAL, ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getScheduleHearing());
 
         assertTrue(result.getErrors().isEmpty());
@@ -1536,8 +1421,8 @@ public class SscsCaseTransformerTest {
         CaseResponse result = transformer.transformExceptionRecord(exceptionRecord, false);
 
         List<ExcludeDate> excludeDates = ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getExcludeDates();
-        assertEquals("2018-12-16", (excludeDates.getFirst().getValue().getStart()));
-        assertEquals("2018-12-18", (excludeDates.getFirst().getValue().getEnd()));
+        assertEquals("2018-12-16", (excludeDates.get(0).getValue().getStart()));
+        assertEquals("2018-12-18", (excludeDates.get(0).getValue().getEnd()));
 
         assertTrue(result.getErrors().isEmpty());
     }
@@ -1627,7 +1512,7 @@ public class SscsCaseTransformerTest {
 
         CaseResponse result = transformer.transformExceptionRecord(exceptionRecord, false);
 
-        assertEquals("signLanguageInterpreter", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getArrangements().getFirst());
+        assertEquals("signLanguageInterpreter", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getArrangements().get(0));
         assertEquals(SIGN_LANGUAGE_TYPE, ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getSignLanguageType());
 
         assertTrue(result.getErrors().isEmpty());
@@ -1640,7 +1525,7 @@ public class SscsCaseTransformerTest {
 
         CaseResponse result = transformer.transformExceptionRecord(exceptionRecord, false);
 
-        assertEquals("signLanguageInterpreter", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getArrangements().getFirst());
+        assertEquals("signLanguageInterpreter", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getArrangements().get(0));
         assertEquals(DEFAULT_SIGN_LANGUAGE, ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getSignLanguageType());
 
         assertTrue(result.getErrors().isEmpty());
@@ -1666,7 +1551,7 @@ public class SscsCaseTransformerTest {
 
         CaseResponse result = transformer.transformExceptionRecord(exceptionRecord, false);
 
-        assertEquals("signLanguageInterpreter", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getArrangements().getFirst());
+        assertEquals("signLanguageInterpreter", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getArrangements().get(0));
         assertEquals(SIGN_LANGUAGE_TYPE, ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getSignLanguageType());
         assertEquals("No", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getLanguageInterpreter());
 
@@ -1680,7 +1565,7 @@ public class SscsCaseTransformerTest {
         pairs.put(HEARING_OPTIONS_DIALECT_LITERAL, HEARING_OPTIONS_DIALECT_TYPE);
 
         CaseResponse result = transformer.transformExceptionRecord(exceptionRecord, false);
-        assertEquals("signLanguageInterpreter", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getArrangements().getFirst());
+        assertEquals("signLanguageInterpreter", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getArrangements().get(0));
         assertEquals(SIGN_LANGUAGE_TYPE, ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getSignLanguageType());
         assertEquals(HEARING_OPTIONS_LANGUAGE_TYPE + " " + HEARING_OPTIONS_DIALECT_TYPE, ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getLanguages());
     }
@@ -1694,7 +1579,7 @@ public class SscsCaseTransformerTest {
         pairs.put(HEARING_OPTIONS_SIGN_LANGUAGE_INTERPRETER_LITERAL, true);
 
         CaseResponse result = transformer.transformExceptionRecord(exceptionRecord, false);
-        assertEquals("signLanguageInterpreter", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getArrangements().getFirst());
+        assertEquals("signLanguageInterpreter", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getArrangements().get(0));
         assertEquals("British Sign Language", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getSignLanguageType());
         assertEquals(HEARING_OPTIONS_LANGUAGE_TYPE + " " + HEARING_OPTIONS_DIALECT_TYPE, ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getLanguages());
     }
@@ -1721,7 +1606,7 @@ public class SscsCaseTransformerTest {
 
         assertEquals("Yes", result.getTransformedCase().get("linkedCasesBoolean"));
 
-        assertEquals("123", ((CaseLink)((List<?>) result.getTransformedCase().get("associatedCase")).getFirst()).getValue().getCaseReference());
+        assertEquals("123", ((CaseLink)((List<?>) result.getTransformedCase().get("associatedCase")).get(0)).getValue().getCaseReference());
     }
 
     @Test
@@ -1740,9 +1625,9 @@ public class SscsCaseTransformerTest {
 
         String message = "Duplicate case already exists - please reject this exception record";
         if (combineWarnings) {
-            assertEquals(message, result.getWarnings().getFirst());
+            assertEquals(message, result.getWarnings().get(0));
         } else {
-            assertEquals(message, result.getErrors().getFirst());
+            assertEquals(message, result.getErrors().get(0));
         }
     }
 
@@ -1807,10 +1692,10 @@ public class SscsCaseTransformerTest {
         Map<String, Object> transformedCase = result.getTransformedCase();
         @SuppressWarnings("unchecked")
         List<SscsDocument> docs = ((List<SscsDocument>) transformedCase.get("sscsDocument"));
-        assertEquals(LocalDateTime.now().toLocalDate().toString(), docs.getFirst().getValue().getDocumentDateAdded());
-        assertEquals(scannedRecord.getFileName(), docs.getFirst().getValue().getDocumentFileName());
-        assertEquals(scannedRecord.getUrl().getDocumentUrl(), docs.getFirst().getValue().getDocumentLink().getDocumentUrl());
-        assertEquals("appellantEvidence", docs.getFirst().getValue().getDocumentType());
+        assertEquals(LocalDateTime.now().toLocalDate().toString(), docs.get(0).getValue().getDocumentDateAdded());
+        assertEquals(scannedRecord.getFileName(), docs.get(0).getValue().getDocumentFileName());
+        assertEquals(scannedRecord.getUrl().getDocumentUrl(), docs.get(0).getValue().getDocumentLink().getDocumentUrl());
+        assertEquals("appellantEvidence", docs.get(0).getValue().getDocumentType());
 
         assertEquals(YES_LITERAL, transformedCase.get("evidencePresent"));
 
@@ -1834,10 +1719,10 @@ public class SscsCaseTransformerTest {
         Map<String, Object> transformedCase = result.getTransformedCase();
         @SuppressWarnings("unchecked")
         List<SscsDocument> docs = ((List<SscsDocument>) transformedCase.get("sscsDocument"));
-        assertEquals(LocalDateTime.now().toLocalDate().toString(), docs.getFirst().getValue().getDocumentDateAdded());
-        assertEquals(scannedRecord.getFileName(), docs.getFirst().getValue().getDocumentFileName());
-        assertEquals(scannedRecord.getUrl().getDocumentUrl(), docs.getFirst().getValue().getDocumentLink().getDocumentUrl());
-        assertEquals("appellantEvidence", docs.getFirst().getValue().getDocumentType());
+        assertEquals(LocalDateTime.now().toLocalDate().toString(), docs.get(0).getValue().getDocumentDateAdded());
+        assertEquals(scannedRecord.getFileName(), docs.get(0).getValue().getDocumentFileName());
+        assertEquals(scannedRecord.getUrl().getDocumentUrl(), docs.get(0).getValue().getDocumentLink().getDocumentUrl());
+        assertEquals("appellantEvidence", docs.get(0).getValue().getDocumentType());
 
         assertEquals(YES_LITERAL, transformedCase.get("evidencePresent"));
 
@@ -1899,8 +1784,8 @@ public class SscsCaseTransformerTest {
 
         @SuppressWarnings("unchecked")
         List<SscsDocument> docs = ((List<SscsDocument>) result.getTransformedCase().get("sscsDocument"));
-        assertEquals(LocalDateTime.now().toLocalDate().toString(), docs.getFirst().getValue().getDocumentDateAdded());
-        assertEquals(scannedRecord1.getFileName(), docs.getFirst().getValue().getDocumentFileName());
+        assertEquals(LocalDateTime.now().toLocalDate().toString(), docs.get(0).getValue().getDocumentDateAdded());
+        assertEquals(scannedRecord1.getFileName(), docs.get(0).getValue().getDocumentFileName());
         assertEquals(scannedRecord1.getUrl().getDocumentUrl(), docs.get(0).getValue().getDocumentLink().getDocumentUrl());
         assertEquals(documentType, docs.get(0).getValue().getDocumentType());
         assertEquals(LocalDateTime.now().toLocalDate().toString(), docs.get(1).getValue().getDocumentDateAdded());
@@ -2103,7 +1988,7 @@ public class SscsCaseTransformerTest {
 
         CaseResponse result = transformer.transformExceptionRecord(exceptionRecord, false);
 
-        assertEquals("2030-12-01", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getExcludeDates().getFirst().getValue().getStart());
+        assertEquals("2030-12-01", ((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getExcludeDates().get(0).getValue().getStart());
 
         assertTrue(result.getErrors().isEmpty());
     }
@@ -2118,7 +2003,7 @@ public class SscsCaseTransformerTest {
         CaseResponse result = transformer.transformExceptionRecord(exceptionRecord, false);
 
         assertEquals(1, result.getWarnings().size());
-        assertEquals(HEARING_EXCLUDE_DATES_MISSING, result.getWarnings().getFirst());
+        assertEquals(HEARING_EXCLUDE_DATES_MISSING, result.getWarnings().get(0));
 
         assertNull(((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getExcludeDates());
 
@@ -2134,7 +2019,7 @@ public class SscsCaseTransformerTest {
         CaseResponse result = transformer.transformExceptionRecord(exceptionRecord, false);
 
         assertEquals(1, result.getWarnings().size());
-        assertEquals(HEARING_EXCLUDE_DATES_MISSING, result.getWarnings().getFirst());
+        assertEquals(HEARING_EXCLUDE_DATES_MISSING, result.getWarnings().get(0));
 
         assertNull(((Appeal) result.getTransformedCase().get("appeal")).getHearingOptions().getExcludeDates());
 
@@ -2187,7 +2072,7 @@ public class SscsCaseTransformerTest {
 
         CaseResponse result = transformer.transformExceptionRecord(exceptionRecord, true);
 
-        assertEquals("NI Number is invalid", result.getErrors().getFirst());
+        assertEquals("NI Number is invalid", result.getErrors().get(0));
     }
 
     @Test
@@ -2352,7 +2237,7 @@ public class SscsCaseTransformerTest {
         pairs.put(APPEAL_GROUNDS_2, "My appeal grounds");
 
         CaseResponse result = transformer.transformExceptionRecord(exceptionRecord, false);
-        assertEquals("My appeal grounds", ((Appeal) result.getTransformedCase().get("appeal")).getAppealReasons().getReasons().getFirst().getValue().getDescription());
+        assertEquals("My appeal grounds", ((Appeal) result.getTransformedCase().get("appeal")).getAppealReasons().getReasons().get(0).getValue().getDescription());
     }
 
     @Test
@@ -2492,7 +2377,7 @@ public class SscsCaseTransformerTest {
         assertNoErrorsOrWarnings(result);
 
         @SuppressWarnings("unchecked")
-        OtherParty otherParty = ((List<CcdValue<OtherParty>>) result.getTransformedCase().get("otherParties")).getFirst().getValue();
+        OtherParty otherParty = ((List<CcdValue<OtherParty>>) result.getTransformedCase().get("otherParties")).get(0).getValue();
         assertEquals(OTHER_PARTY_ID_ONE, otherParty.getId());
         Name otherPartyName = otherParty.getName();
         assertEquals(OTHER_PARTY_TITLE, otherPartyName.getTitle());
@@ -2547,11 +2432,11 @@ public class SscsCaseTransformerTest {
         pairs.put("is_paying_parent", "true");
         CaseResponse result = transformer.transformExceptionRecord(sscs2ExceptionRecord, false);
         assertFalse(result.getErrors().isEmpty());
-        assertEquals("is_other_party_address_known has an invalid value. Should be Yes/No or True/False", result.getErrors().getFirst());
+        assertEquals("is_other_party_address_known has an invalid value. Should be Yes/No or True/False", result.getErrors().get(0));
         assertTrue(result.getWarnings().isEmpty());
         @SuppressWarnings("unchecked")
         List<CcdValue<OtherParty>> otherParties = ((List<CcdValue<OtherParty>>) result.getTransformedCase().get("otherParties"));
-        assertNull(otherParties.getFirst().getValue().getAddress());
+        assertNull(otherParties.get(0).getValue().getAddress());
     }
 
     @Test
@@ -2578,7 +2463,7 @@ public class SscsCaseTransformerTest {
         assertNoErrorsOrWarnings(result);
         @SuppressWarnings("unchecked")
         List<CcdValue<OtherParty>> otherParties = ((List<CcdValue<OtherParty>>) result.getTransformedCase().get("otherParties"));
-        assertNotNull(otherParties.getFirst().getValue().getAddress());
+        assertNotNull(otherParties.get(0).getValue().getAddress());
     }
 
     @Test
@@ -2646,7 +2531,7 @@ public class SscsCaseTransformerTest {
 
         CaseResponse result = transformer.transformExceptionRecord(sscs2ExceptionRecord, false);
         assertFalse(result.getWarnings().isEmpty());
-        assertEquals(errorMessage, result.getWarnings().getFirst());
+        assertEquals(errorMessage, result.getWarnings().get(0));
     }
 
     @Test
@@ -2825,7 +2710,11 @@ public class SscsCaseTransformerTest {
     }
 
     private void assertOneError(CaseResponse result) {
-        assertEquals(result.getErrors().size(), 1);
+        assertError(result, 1);
+    }
+
+    private void assertError(CaseResponse result, int errorCount) {
+        assertTrue(result.getErrors().size() == errorCount);
         assertTrue(result.getWarnings().isEmpty());
     }
 
@@ -2873,10 +2762,14 @@ public class SscsCaseTransformerTest {
         assertNoErrorsOrWarnings(result);
     }
 
-    private void checkFormTypeWithOneError(String given) {
-        CaseResponse result = preparingFormTypeCheckingDataAndImplementTransformExceptionRecord(given, null, false);
+    private void checkFormTypeWithOneError(String given, String input) {
+        checkFormTypeWithError(given, input, 1);
+    }
 
-        assertOneError(result);
+    private void checkFormTypeWithError(String given, String input, int errorCount) {
+        CaseResponse result = preparingFormTypeCheckingDataAndImplementTransformExceptionRecord(given, input, false);
+
+        assertError(result, errorCount);
     }
 
     private void checkFormTypeAndDocumentUpdated(String given, String input, String expected) {
@@ -2897,7 +2790,7 @@ public class SscsCaseTransformerTest {
 
     @Test
     public void givenNullFormAndWithNullFormTypeInput_thenThrowError() {
-        checkFormTypeWithOneError(null);
+        checkFormTypeWithOneError(null, null);
     }
 
     @Test
@@ -2907,7 +2800,7 @@ public class SscsCaseTransformerTest {
 
     @Test
     public void givenOtherFormAndWithNullFormTypeInput_thenThrowError() {
-        checkFormTypeWithOneError("Other");
+        checkFormTypeWithOneError("Other", null);
     }
 
     @Test
@@ -2925,6 +2818,8 @@ public class SscsCaseTransformerTest {
     public void givenNullFormAndWithSscs5FormTypeInput_thenDocumentUpdated() {
         checkFormTypeAndDocumentUpdated(null, "sscs5", "sscs5");
     }
+
+
 
     private Appeal buildTestAppealData() {
         Name appellantName = Name.builder().title(APPELLANT_TITLE).firstName(APPELLANT_FIRST_NAME).lastName(APPELLANT_LAST_NAME).build();
