@@ -12,7 +12,6 @@ import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoInteractions;
 import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.CHILD_MAINTENANCE_NUMBER;
 import static uk.gov.hmcts.reform.sscs.bulkscan.TestDataConstants.OTHER_PARTY_ADDRESS_LINE1;
@@ -26,11 +25,6 @@ import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.HEARING_
 import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.HEARING_TYPE_PAPER;
 import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.HEARING_TYPE_TELEPHONE_LITERAL;
 import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.HEARING_TYPE_VIDEO_LITERAL;
-import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.IBC_ROLE_FOR_DECEASED;
-import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.IBC_ROLE_FOR_LACKING_CAPACITY;
-import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.IBC_ROLE_FOR_POA;
-import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.IBC_ROLE_FOR_SELF;
-import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.IBC_ROLE_FOR_U18;
 import static uk.gov.hmcts.reform.sscs.bulkscan.constants.SscsConstants.NO_LITERAL;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.Benefit.ATTENDANCE_ALLOWANCE;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.Benefit.BEREAVEMENT_BENEFIT;
@@ -52,7 +46,6 @@ import static uk.gov.hmcts.reform.sscs.ccd.domain.Benefit.SOCIAL_FUND;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.Benefit.UC;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -122,6 +115,7 @@ public class SscsCaseValidatorTest {
     private SscsCaseValidator validator;
     private MrnDetails defaultMrnDetails;
     private CaseResponse transformResponse;
+    private CaseDetails caseDetails;
     private ScannedData scannedData;
     private ExceptionRecord exceptionRecord;
 
@@ -133,7 +127,7 @@ public class SscsCaseValidatorTest {
     public void setup() {
         dwpAddressLookupService = new DwpAddressLookupService();
         scannedData = mock(ScannedData.class);
-        CaseDetails caseDetails = mock(CaseDetails.class);
+        caseDetails = mock(CaseDetails.class);
         validator = new SscsCaseValidator(regionalProcessingCenterService, dwpAddressLookupService, postcodeValidator,
             sscsJsonExtractor, false);
         transformResponse = CaseResponse.builder().build();
@@ -183,11 +177,11 @@ public class SscsCaseValidatorTest {
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecord,
-            buildMinimumAppealDataWithBenefitTypeAndFormType(benefitShortName, buildAppellant(false),
+            buildMinimumAppealDataWithBenefitTypeAndFormType(benefitShortName, buildAppellant(false), true,
                 FormType.SSCS1U),
             false);
 
-        assertEquals("office is invalid", response.getWarnings().getFirst());
+        assertEquals("office is invalid", response.getWarnings().get(0));
     }
 
     @Test
@@ -198,7 +192,7 @@ public class SscsCaseValidatorTest {
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecord,
-            buildMinimumAppealDataWithBenefitTypeAndFormType(benefitShortName, buildAppellant(false),
+            buildMinimumAppealDataWithBenefitTypeAndFormType(benefitShortName, buildAppellant(false), true,
                 FormType.SSCS1U),
             false);
 
@@ -213,11 +207,11 @@ public class SscsCaseValidatorTest {
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecord,
-            buildMinimumAppealDataWithBenefitTypeAndFormType(UC.getShortName(), buildAppellant(false),
+            buildMinimumAppealDataWithBenefitTypeAndFormType(UC.getShortName(), buildAppellant(false), true,
                 FormType.SSCS1U),
             false);
 
-        assertEquals("office is invalid", response.getWarnings().getFirst());
+        assertEquals("office is invalid", response.getWarnings().get(0));
     }
 
     @Test
@@ -228,7 +222,7 @@ public class SscsCaseValidatorTest {
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecord,
-            buildMinimumAppealDataWithBenefitTypeAndFormType(UC.getShortName(), buildAppellant(false),
+            buildMinimumAppealDataWithBenefitTypeAndFormType(UC.getShortName(), buildAppellant(false), true,
                 FormType.SSCS1U),
             false);
 
@@ -247,7 +241,7 @@ public class SscsCaseValidatorTest {
                 exceptionRecord,
                 buildMinimumAppealDataWithBenefitTypeAndFormType(ATTENDANCE_ALLOWANCE.getShortName(),
                     buildAppellant(false),
-                    FormType.SSCS1U),
+                    true, FormType.SSCS1U),
                 false);
 
         String assertionMessage = "Asserting Benefit: Attendance Allowance with Office: " + dwpIssuingOffice;
@@ -262,7 +256,7 @@ public class SscsCaseValidatorTest {
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecord,
-            buildMinimumAppealDataWithBenefitTypeAndFormType(DLA.getShortName(), buildAppellant(false),
+            buildMinimumAppealDataWithBenefitTypeAndFormType(DLA.getShortName(), buildAppellant(false), true,
                 FormType.SSCS1U),
             false);
 
@@ -279,7 +273,7 @@ public class SscsCaseValidatorTest {
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecord,
-            buildMinimumAppealDataWithBenefitTypeAndFormType(INCOME_SUPPORT.getShortName(), buildAppellant(false),
+            buildMinimumAppealDataWithBenefitTypeAndFormType(INCOME_SUPPORT.getShortName(), buildAppellant(false), true,
                 FormType.SSCS1U),
             false);
 
@@ -295,7 +289,7 @@ public class SscsCaseValidatorTest {
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecord,
-            buildMinimumAppealDataWithBenefitTypeAndFormType(IIDB.getShortName(), buildAppellant(false),
+            buildMinimumAppealDataWithBenefitTypeAndFormType(IIDB.getShortName(), buildAppellant(false), true,
                 FormType.SSCS1U),
             false);
 
@@ -311,7 +305,7 @@ public class SscsCaseValidatorTest {
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecord,
-            buildMinimumAppealDataWithBenefitTypeAndFormType(JSA.getShortName(), buildAppellant(false),
+            buildMinimumAppealDataWithBenefitTypeAndFormType(JSA.getShortName(), buildAppellant(false), true,
                 FormType.SSCS1U),
             false);
 
@@ -329,7 +323,7 @@ public class SscsCaseValidatorTest {
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecord,
-            buildMinimumAppealDataWithBenefitTypeAndFormType(SOCIAL_FUND.getShortName(), buildAppellant(false),
+            buildMinimumAppealDataWithBenefitTypeAndFormType(SOCIAL_FUND.getShortName(), buildAppellant(false), true,
                 FormType.SSCS1U),
             false);
 
@@ -347,7 +341,7 @@ public class SscsCaseValidatorTest {
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecord,
             buildMinimumAppealDataWithBenefitTypeAndFormType(INDUSTRIAL_DEATH_BENEFIT.getShortName(),
-                buildAppellant(false), FormType.SSCS1U),
+                buildAppellant(false), true, FormType.SSCS1U),
             false);
 
         String assertionMessage = "Asserting Benefit: Industrial Death Benefit with Office: " + dwpIssuingOffice;
@@ -363,7 +357,7 @@ public class SscsCaseValidatorTest {
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecord,
-            buildMinimumAppealDataWithBenefitTypeAndFormType(PENSION_CREDIT.getShortName(), buildAppellant(false),
+            buildMinimumAppealDataWithBenefitTypeAndFormType(PENSION_CREDIT.getShortName(), buildAppellant(false), true,
                 FormType.SSCS1U),
             false);
 
@@ -381,7 +375,7 @@ public class SscsCaseValidatorTest {
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecord,
             buildMinimumAppealDataWithBenefitTypeAndFormType(RETIREMENT_PENSION.getShortName(), buildAppellant(false),
-                FormType.SSCS1U),
+                true, FormType.SSCS1U),
             false);
 
         String assertionMessage = "Asserting Benefit: Retirement Pension with Office: " + dwpIssuingOffice;
@@ -398,7 +392,7 @@ public class SscsCaseValidatorTest {
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecord,
             buildMinimumAppealDataWithBenefitTypeAndFormType(BEREAVEMENT_BENEFIT.getShortName(), buildAppellant(false),
-                FormType.SSCS1U),
+                true, FormType.SSCS1U),
             false);
 
         String assertionMessage = "Asserting Benefit: Bereavement Benefit with Office: " + dwpIssuingOffice;
@@ -415,7 +409,7 @@ public class SscsCaseValidatorTest {
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecord,
             buildMinimumAppealDataWithBenefitTypeAndFormType(CARERS_ALLOWANCE.getShortName(), buildAppellant(false),
-                FormType.SSCS1U),
+                true, FormType.SSCS1U),
             false);
 
         String assertionMessage = "Asserting Benefit: Carers Allowance with Office: " + dwpIssuingOffice;
@@ -432,7 +426,7 @@ public class SscsCaseValidatorTest {
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecord,
             buildMinimumAppealDataWithBenefitTypeAndFormType(MATERNITY_ALLOWANCE.getShortName(), buildAppellant(false),
-                FormType.SSCS1U),
+                true, FormType.SSCS1U),
             false);
 
         String assertionMessage = "Asserting Benefit: Maternity Allowance with Office: " + dwpIssuingOffice;
@@ -449,7 +443,7 @@ public class SscsCaseValidatorTest {
             exceptionRecord,
             buildMinimumAppealDataWithBenefitTypeAndFormType(BEREAVEMENT_SUPPORT_PAYMENT_SCHEME.getShortName(),
                 buildAppellant(false),
-                FormType.SSCS1U),
+                true, FormType.SSCS1U),
             false);
 
         String assertionMessage =
@@ -485,34 +479,6 @@ public class SscsCaseValidatorTest {
                 "mrn_date is empty",
                 "office is empty",
                 "benefit_type_description is empty");
-    }
-
-    @Test
-    public void givenAnAppellantIsEmptySscs8_thenAddAWarningForIbcaReference() {
-        Map<String, Object> ocrCaseDataEmptyOffice = new HashMap<>();
-        ocrCaseDataEmptyOffice.put("person1_address_line4", "county");
-        ocrCaseDataEmptyOffice.put("person2_address_line4", "county");
-        ocrCaseDataEmptyOffice.put("representative_address_line4", "county");
-        given(scannedData.getOcrCaseData()).willReturn(ocrCaseDataEmptyOffice);
-        Map<String, Object> pairs = new HashMap<>();
-        BenefitType benefitType = BenefitType.builder().code(INFECTED_BLOOD_COMPENSATION.getShortName()).build();
-        pairs.put("appeal", Appeal.builder().hearingType(HEARING_TYPE_ORAL).benefitType(benefitType).build());
-        pairs.put("bulkScanCaseReference", 123);
-        pairs.put("formType", FormType.SSCS8);
-
-        CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord, pairs, false);
-
-        assertThat(response.getWarnings())
-            .containsOnly(
-                "person1_title is empty",
-                "person1_first_name is empty",
-                "person1_last_name is empty",
-                "person1_address_line1 is empty",
-                "person1_address_line3 is empty",
-                "person1_address_line4 is empty",
-                "person1_postcode is empty",
-                "person1_ibca_reference is empty",
-                "mrn_date is empty");
     }
 
     @Test
@@ -616,53 +582,6 @@ public class SscsCaseValidatorTest {
     }
 
     @Test
-    public void givenIbcCaseAppellantWithNoAddress_thenAddWarnings() {
-        Map<String, Object> pairs = new HashMap<>();
-        pairs.put("appeal", Appeal.builder().appellant(Appellant.builder().name(
-                    Name.builder().firstName("Harry").lastName("Kane").build())
-                .identity(Identity.builder().ibcaReference("A12A21").build())
-                .ibcRole("some-role").build())
-            .benefitType(BenefitType.builder().code(INFECTED_BLOOD_COMPENSATION.getShortName()).build())
-            .mrnDetails(defaultMrnDetails)
-            .hearingType(HEARING_TYPE_ORAL)
-            .hearingSubtype(HearingSubtype.builder().wantsHearingTypeFaceToFace("Yes").build()).build());
-        pairs.put("bulkScanCaseReference", 123);
-        pairs.put("formType", FormType.SSCS8);
-
-        CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord, pairs, false);
-
-        assertThat(response.getWarnings())
-            .containsOnly(
-                "person1_address_line1 is empty",
-                "person1_address_line3 is empty",
-                "person1_address_line4 is empty",
-                "person1_postcode is empty");
-    }
-
-    @Test
-    public void givenIbcCaseAppellantWithPortOfEntry_thenNoWarningsForCountyPostcode() {
-        Map<String, Object> pairs = new HashMap<>();
-        pairs.put("appeal", Appeal.builder().appellant(Appellant.builder().name(
-                    Name.builder().firstName("Harry").lastName("Kane").build())
-                .identity(Identity.builder().ibcaReference("A12A21").build())
-                .ibcRole("some-role").address(Address.builder().portOfEntry("GBSTGTY00")
-                    .build()).build())
-            .benefitType(BenefitType.builder().code(INFECTED_BLOOD_COMPENSATION.getShortName()).build())
-            .mrnDetails(defaultMrnDetails)
-            .hearingType(HEARING_TYPE_ORAL)
-            .hearingSubtype(HearingSubtype.builder().wantsHearingTypeFaceToFace("Yes").build()).build());
-        pairs.put("bulkScanCaseReference", 123);
-        pairs.put("formType", FormType.SSCS8);
-
-        CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord, pairs, false);
-
-        assertThat(response.getWarnings())
-            .containsOnly(
-                "person1_address_line1 is empty",
-                "person1_address_line3 is empty");
-    }
-
-    @Test
     public void givenAnAppellantDoesNotContainATitle_thenAddAWarning() {
         Appellant appellant = buildAppellant(false);
         appellant.getName().setTitle(null);
@@ -671,7 +590,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_title is empty", response.getWarnings().getFirst());
+        assertEquals("person1_title is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -683,7 +602,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_title is invalid", response.getWarnings().getFirst());
+        assertEquals("person1_title is invalid", response.getWarnings().get(0));
     }
 
     @Test
@@ -734,7 +653,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_first_name is empty", response.getWarnings().getFirst());
+        assertEquals("person1_first_name is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -746,7 +665,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_last_name is empty", response.getWarnings().getFirst());
+        assertEquals("person1_last_name is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -758,7 +677,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_address_line1 is empty", response.getWarnings().getFirst());
+        assertEquals("person1_address_line1 is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -770,7 +689,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_address_line1 has invalid characters at the beginning", response.getWarnings().getFirst());
+        assertEquals("person1_address_line1 has invalid characters at the beginning", response.getWarnings().get(0));
     }
 
     @Test
@@ -783,7 +702,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_address_line3 is empty", response.getWarnings().getFirst());
+        assertEquals("person1_address_line3 is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -796,7 +715,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_address_line3 has invalid characters at the beginning", response.getWarnings().getFirst());
+        assertEquals("person1_address_line3 has invalid characters at the beginning", response.getWarnings().get(0));
     }
 
     @Test
@@ -811,7 +730,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_address_line2 is empty", response.getWarnings().getFirst());
+        assertEquals("person1_address_line2 is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -826,7 +745,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_address_line2 has invalid characters at the beginning", response.getWarnings().getFirst());
+        assertEquals("person1_address_line2 has invalid characters at the beginning", response.getWarnings().get(0));
     }
 
     @Test
@@ -839,7 +758,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_address_line4 is empty", response.getWarnings().getFirst());
+        assertEquals("person1_address_line4 is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -852,7 +771,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_address_line4 has invalid characters at the beginning", response.getWarnings().getFirst());
+        assertEquals("person1_address_line4 has invalid characters at the beginning", response.getWarnings().get(0));
     }
 
     @Test
@@ -867,7 +786,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_address_line3 is empty", response.getWarnings().getFirst());
+        assertEquals("person1_address_line3 is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -882,7 +801,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_address_line3 has invalid characters at the beginning", response.getWarnings().getFirst());
+        assertEquals("person1_address_line3 has invalid characters at the beginning", response.getWarnings().get(0));
     }
 
     @Test
@@ -909,7 +828,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_postcode is empty", response.getWarnings().getFirst());
+        assertEquals("person1_postcode is empty", response.getWarnings().get(0));
         verifyNoInteractions(regionalProcessingCenterService);
     }
 
@@ -920,14 +839,12 @@ public class SscsCaseValidatorTest {
         appellant.getAddress().setPostcode(null);
         appellant.getAddress().setInMainlandUk(YesNo.NO);
         appellant.getAddress().setPortOfEntry(PORT_OF_NORWICH_A_FINE_CITY);
-        appellant.getIdentity().setIbcaReference("A12A12");
-        appellant.setIbcRole("some-role");
 
-        var data = buildMinimumAppealDataWithBenefitType(INFECTED_BLOOD_COMPENSATION.getShortName(), appellant, FormType.SSCS8);
+        var data = buildMinimumAppealDataWithBenefitType(INFECTED_BLOOD_COMPENSATION.getShortName(), appellant, true, FormType.SSCS5);
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord, data, false);
 
         assertEquals(0, response.getWarnings().size());
-        verify(regionalProcessingCenterService).getByPostcode(PORT_OF_NORWICH_A_FINE_CITY, true);
+        verifyNoInteractions(regionalProcessingCenterService);
     }
 
     @Test
@@ -942,7 +859,7 @@ public class SscsCaseValidatorTest {
         assertNull(response.getTransformedCase().get("regionalProcessingCenter"));
         assertNull(response.getTransformedCase().get("region"));
         assertEquals("person1_postcode is not a postcode that maps to a regional processing center",
-            response.getWarnings().getFirst());
+            response.getWarnings().get(0));
     }
 
     @Test
@@ -957,7 +874,7 @@ public class SscsCaseValidatorTest {
 
         assertEquals(rpc, response.getTransformedCase().get("regionalProcessingCenter"));
         assertEquals(rpc.getName(), response.getTransformedCase().get("region"));
-        assertTrue(response.getWarnings().isEmpty());
+        assertTrue(response.getWarnings().size() == 0);
     }
 
     @Test
@@ -969,7 +886,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_nino is empty", response.getWarnings().getFirst());
+        assertEquals("person1_nino is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -981,7 +898,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_nino is invalid", response.getWarnings().getFirst());
+        assertEquals("person1_nino is invalid", response.getWarnings().get(0));
     }
 
     @Test
@@ -998,149 +915,6 @@ public class SscsCaseValidatorTest {
     }
 
     @Test
-    public void givenSscs8DoesNotContainIbcaReference_thenAddAWarning() {
-        Appellant appellant = buildAppellant(false);
-        appellant.getIdentity().setIbcaReference(null);
-        appellant.setIbcRole("some-role");
-
-        CaseResponse response = validator
-            .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS8),
-                false);
-
-        assertEquals("person1_ibca_reference is empty", response.getWarnings().getFirst());
-    }
-
-    @Test
-    public void givenIbcCaseDoesNotContainIbcaReference_thenAddAWarning() {
-        Appellant appellant = buildAppellant(false);
-        appellant.getIdentity().setIbcaReference(null);
-        appellant.setIbcRole("some-role");
-
-        CaseResponse response = validator
-            .validateExceptionRecord(transformResponse, exceptionRecord,
-                buildMinimumAppealDataWithBenefitType(INFECTED_BLOOD_COMPENSATION.getShortName(), appellant, FormType.SSCS8),
-                false);
-
-        assertEquals("person1_ibca_reference is empty", response.getWarnings().getFirst());
-    }
-
-    @Test
-    public void givenSscs8DoesNotContainValidIbcaReference_thenAddAWarning() {
-        Appellant appellant = buildAppellant(false);
-        appellant.getIdentity().setIbcaReference("NOT VALID");
-        appellant.setIbcRole("some-role");
-
-        CaseResponse response = validator
-            .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS8),
-                false);
-
-        assertEquals("person1_ibca_reference is invalid", response.getWarnings().getFirst());
-    }
-
-    @Test
-    public void givenSscs8HasNoAppellantIbcRole_thenAddAnError() {
-        Appellant appellant = buildAppellant(false);
-        appellant.getIdentity().setIbcaReference("A12A12");
-
-        CaseResponse response = validator
-            .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS8),
-                false);
-
-        assertEquals(1, response.getErrors().size());
-        String actualError = response.getErrors().getFirst();
-        assertTrue(actualError.startsWith("One of the following must be True: "));
-        assertTrue(actualError.contains("person1_as_rep_of_deceased"));
-        assertTrue(actualError.contains("person1_on_behalf_of_a_person_who_lacks_capacity"));
-        assertTrue(actualError.contains("person1_as_poa"));
-        assertTrue(actualError.contains("person1_for_self"));
-        assertTrue(actualError.contains("person1_for_person_under_18"));
-    }
-
-    @Test
-    public void givenSscs8HasOneAppellantIbcRole_thenDoNotError() {
-        Appellant appellant = buildAppellant(false);
-        appellant.getIdentity().setIbcaReference("A12A12");
-        ocrCaseData.put(IBC_ROLE_FOR_SELF, true);
-
-        CaseResponse response = validator
-            .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS8),
-                false);
-
-        assertEquals(0, response.getErrors().size());
-    }
-
-    @Test
-    public void givenSscs8HasAllAppellantIbcRoles_thenAddErrors() {
-        ocrCaseData.put(IBC_ROLE_FOR_SELF, true);
-        ocrCaseData.put(IBC_ROLE_FOR_U18, true);
-        ocrCaseData.put(IBC_ROLE_FOR_DECEASED, true);
-        ocrCaseData.put(IBC_ROLE_FOR_POA, true);
-        ocrCaseData.put(IBC_ROLE_FOR_LACKING_CAPACITY, true);
-        Appellant appellant = buildAppellant(false);
-        appellant.getIdentity().setIbcaReference("A12A12");
-        appellant.setIbcRole(null);
-
-        CaseResponse response = validator
-            .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS8),
-                false);
-        assertEquals(1, response.getErrors().size());
-        String error = response.getErrors().getFirst().replace(" cannot all be True", "");
-        List<String> errors = Arrays.asList(error.split(", "));
-        assertTrue(errors.contains(IBC_ROLE_FOR_SELF));
-        assertTrue(errors.contains(IBC_ROLE_FOR_U18));
-        assertTrue(errors.contains(IBC_ROLE_FOR_LACKING_CAPACITY));
-        assertTrue(errors.contains(IBC_ROLE_FOR_POA));
-        assertTrue(errors.contains(IBC_ROLE_FOR_DECEASED));
-    }
-
-    @Test
-    public void givenSscs8HasMultipleAppellantIbcRoles_thenAddErrors() {
-        ocrCaseData.put(IBC_ROLE_FOR_SELF, true);
-        ocrCaseData.put(IBC_ROLE_FOR_U18, true);
-        ocrCaseData.put(IBC_ROLE_FOR_POA, true);
-        Appellant appellant = buildAppellant(false);
-        appellant.getIdentity().setIbcaReference("A12A12");
-        appellant.setIbcRole(null);
-
-        CaseResponse response = validator
-            .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS8),
-                false);
-
-        assertEquals(1, response.getErrors().size());
-        String error = response.getErrors().getFirst().replace(" cannot all be True", "");
-        List<String> errors = Arrays.asList(error.split(", "));
-        assertTrue(errors.contains(IBC_ROLE_FOR_SELF));
-        assertTrue(errors.contains(IBC_ROLE_FOR_U18));
-        assertTrue(errors.contains(IBC_ROLE_FOR_POA));
-    }
-
-    @Test
-    public void givenSscs8HasIbcRoleFieldTrueAndSet_thenDoNotError() {
-        Appellant appellant = buildAppellant(false);
-        appellant.getIdentity().setIbcaReference("A12A12");
-        appellant.setIbcRole("myself");
-
-        CaseResponse response = validator
-            .validateValidationRecord(buildMinimumAppealData(appellant, true, FormType.SSCS8),
-                false, true);
-
-        assertEquals(0, response.getErrors().size());
-    }
-
-    @Test
-    public void givenSscs8HasIbcRoleFieldTrueAndNotSet_thenError() {
-        Appellant appellant = buildAppellant(false);
-        appellant.getIdentity().setIbcaReference("A12A12");
-        appellant.setIbcRole(null);
-
-        CaseResponse response = validator
-            .validateValidationRecord(buildMinimumAppealData(appellant, true, FormType.SSCS8),
-                false, true);
-
-        assertEquals(Collections.singletonList("ibcRole is empty"), response.getErrors());
-    }
-
-    @Test
     public void givenAnAppointeeExistsAndAnAppellantDoesNotContainANino_thenAddAWarningAboutPerson2() {
         Appellant appellant = buildAppellant(true);
         appellant.getIdentity().setNino(null);
@@ -1149,7 +923,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person2_nino is empty", response.getWarnings().getFirst());
+        assertEquals("person2_nino is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -1165,7 +939,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_nino is empty", response.getWarnings().getFirst());
+        assertEquals("person1_nino is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -1174,7 +948,7 @@ public class SscsCaseValidatorTest {
             buildMinimumAppealDataWithMrn(MrnDetails.builder().dwpIssuingOffice("2").build(), buildAppellant(false),
                 true, FormType.SSCS1PE), false);
 
-        assertEquals("mrn_date is empty", response.getWarnings().getFirst());
+        assertEquals("mrn_date is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -1183,7 +957,7 @@ public class SscsCaseValidatorTest {
             buildMinimumAppealDataWithMrn(MrnDetails.builder().dwpIssuingOffice("2").mrnDate("2148-10-10").build(),
                 buildAppellant(false), true, FormType.SSCS1PE), false);
 
-        assertEquals("mrn_date is in future", response.getWarnings().getFirst());
+        assertEquals("mrn_date is in future", response.getWarnings().get(0));
     }
 
     @Test
@@ -1194,7 +968,7 @@ public class SscsCaseValidatorTest {
             buildMinimumAppealDataWithMrn(MrnDetails.builder().mrnDate("2019-01-01").dwpIssuingOffice(null).build(),
                 buildAppellant(false), true, FormType.SSCS1PE), false);
 
-        assertEquals("office is empty", response.getWarnings().getFirst());
+        assertEquals("office is empty", response.getWarnings().get(0));
         assertEquals(1, response.getWarnings().size());
     }
 
@@ -1221,7 +995,7 @@ public class SscsCaseValidatorTest {
             buildMinimumAppealDataWithMrn(MrnDetails.builder().mrnDate("2019-01-01").dwpIssuingOffice("Bla").build(),
                 buildAppellant(false), true, FormType.SSCS1PE), false);
 
-        assertEquals("office is invalid", response.getWarnings().getFirst());
+        assertEquals("office is invalid", response.getWarnings().get(0));
         assertEquals(1, response.getWarnings().size());
     }
 
@@ -1232,7 +1006,7 @@ public class SscsCaseValidatorTest {
             buildMinimumAppealDataWithMrn(MrnDetails.builder().mrnDate("2019-01-01").dwpIssuingOffice(null).build(),
                 buildAppellant(false), true, FormType.SSCS1PE), false);
 
-        assertEquals("office is empty", response.getWarnings().getFirst());
+        assertEquals("office is empty", response.getWarnings().get(0));
         assertEquals(1, response.getWarnings().size());
     }
 
@@ -1246,7 +1020,7 @@ public class SscsCaseValidatorTest {
             buildMinimumAppealDataWithMrn(MrnDetails.builder().mrnDate("2019-01-01").dwpIssuingOffice(null).build(),
                 buildAppellant(false), true, FormType.SSCS1PE), false);
 
-        assertEquals("office is invalid", response.getWarnings().getFirst());
+        assertEquals("office is invalid", response.getWarnings().get(0));
         assertEquals(1, response.getWarnings().size());
     }
 
@@ -1281,7 +1055,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_dob is in future", response.getWarnings().getFirst());
+        assertEquals("person1_dob is in future", response.getWarnings().get(0));
     }
 
     @Test
@@ -1293,7 +1067,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_dob is in future", response.getWarnings().getFirst());
+        assertEquals("person1_dob is in future", response.getWarnings().get(0));
     }
 
     @Test
@@ -1301,23 +1075,23 @@ public class SscsCaseValidatorTest {
         Appellant appellant = buildAppellant(true);
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithExcludedDate(appellant), false);
+            buildMinimumAppealDataWithExcludedDate("2018-10-10", appellant, true, FormType.SSCS1PE), false);
 
-        assertEquals("hearing_options_exclude_dates is in past", response.getWarnings().getFirst());
+        assertEquals("hearing_options_exclude_dates is in past", response.getWarnings().get(0));
     }
 
     @Test
     public void givenAnAppealDoesNotContainABenefitTypeDescription_thenAddAWarning() {
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithBenefitType(null, buildAppellant(false), FormType.SSCS1PE), false);
+            buildMinimumAppealDataWithBenefitType(null, buildAppellant(false), true, FormType.SSCS1PE), false);
 
-        assertEquals(BENEFIT_TYPE_DESCRIPTION + " is empty", response.getWarnings().getFirst());
+        assertEquals(BENEFIT_TYPE_DESCRIPTION + " is empty", response.getWarnings().get(0));
     }
 
     @Test
     @Parameters({"SSCS1U", "SSCS5"})
     public void givenAnAppealDoesNotContainABenefitTypeOtherForSscs1UOrSscs5Form_thenDoNotAddAWarning(FormType formType) {
-        Map<String, Object> caseData = buildMinimumAppealDataWithBenefitType(null, buildAppellant(false), formType);
+        Map<String, Object> caseData = buildMinimumAppealDataWithBenefitType(null, buildAppellant(false), true, formType);
         caseData.put("formType", formType);
         ExceptionRecord exceptionRecord = formType.equals(FormType.SSCS1U) ? exceptionRecordSscs1U : exceptionRecordSscs5;
         CaseResponse response =
@@ -1329,7 +1103,7 @@ public class SscsCaseValidatorTest {
     @Test
     public void givenAnAppealContainsAnInvalidBenefitTypeDescription_thenAddAnError() {
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithBenefitType("Bla", buildAppellant(false), FormType.SSCS1PE), false);
+            buildMinimumAppealDataWithBenefitType("Bla", buildAppellant(false), true, FormType.SSCS1PE), false);
 
         List<String> benefitNameList = new ArrayList<>();
         for (Benefit be : Benefit.values()) {
@@ -1337,13 +1111,18 @@ public class SscsCaseValidatorTest {
         }
 
         assertEquals(BENEFIT_TYPE_DESCRIPTION + " invalid. Should be one of: " + String.join(", ", benefitNameList),
-            response.getErrors().getFirst());
+            response.getErrors().get(0));
     }
 
     @Test
     public void givenAnAppealContainsAValidLowercaseBenefitTypeDescription_thenDoNotAddAWarning() {
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithBenefitType(PIP.name().toLowerCase(), buildAppellant(false), FormType.SSCS1PE), false);
+            buildMinimumAppealDataWithBenefitType(PIP.name().toLowerCase(), buildAppellant(false), true, FormType.SSCS1PE), false);
+
+        List<String> benefitNameList = new ArrayList<>();
+        for (Benefit be : Benefit.values()) {
+            benefitNameList.add(be.name());
+        }
 
         assertEquals("PIP", ((Appeal) response.getTransformedCase().get("appeal")).getBenefitType().getCode());
         assertEquals("Personal Independence Payment",
@@ -1355,7 +1134,7 @@ public class SscsCaseValidatorTest {
     @Test
     public void givenAnAppealContainsAValidBenefitTypeDescription_thenDoNotAddAWarning() {
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithBenefitType(PIP.name(), buildAppellant(false), FormType.SSCS1PE), false);
+            buildMinimumAppealDataWithBenefitType(PIP.name(), buildAppellant(false), true, FormType.SSCS1PE), false);
 
         assertEquals("PIP", ((Appeal) response.getTransformedCase().get("appeal")).getBenefitType().getCode());
         assertEquals("Personal Independence Payment",
@@ -1367,7 +1146,7 @@ public class SscsCaseValidatorTest {
     @Test
     public void givenAPostcode_thenAddRegionalProcessingCenterToCase() {
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithBenefitType(PIP.name(), buildAppellant(false), FormType.SSCS1PE), false);
+            buildMinimumAppealDataWithBenefitType(PIP.name(), buildAppellant(false), true, FormType.SSCS1PE), false);
 
         assertEquals("Address 1",
             ((RegionalProcessingCenter) response.getTransformedCase().get("regionalProcessingCenter")).getAddress1());
@@ -1377,9 +1156,9 @@ public class SscsCaseValidatorTest {
     @Test
     public void givenAnAppealContainsAnInvalidAppellantMobileNumberLessThan10Digits_thenAddAnError() {
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithBenefitType("Bla", buildAppellantWithMobileNumber("07776156"), FormType.SSCS1PE), false);
+            buildMinimumAppealDataWithBenefitType("Bla", buildAppellantWithMobileNumber("07776156"), true, FormType.SSCS1PE), false);
 
-        assertEquals("person1_mobile is invalid", response.getErrors().getFirst());
+        assertEquals("person1_mobile is invalid", response.getErrors().get(0));
     }
 
     @Test
@@ -1389,9 +1168,9 @@ public class SscsCaseValidatorTest {
         representative.getContact().setMobile("0123456");
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative), false);
+            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative, true, FormType.SSCS1PE), false);
 
-        assertEquals("representative_mobile is invalid", response.getErrors().getFirst());
+        assertEquals("representative_mobile is invalid", response.getErrors().get(0));
     }
 
     @Test
@@ -1400,9 +1179,9 @@ public class SscsCaseValidatorTest {
         appellant.getContact().setMobile(VALID_MOBILE);
         appellant.setAppointee(buildAppointeeWithMobileNumber("07776156"));
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithBenefitType("Bla", appellant, FormType.SSCS1PE), false);
+            buildMinimumAppealDataWithBenefitType("Bla", appellant, true, FormType.SSCS1PE), false);
 
-        assertEquals("person1_mobile is invalid", response.getErrors().getFirst());
+        assertEquals("person1_mobile is invalid", response.getErrors().get(0));
     }
 
     @Test
@@ -1411,7 +1190,7 @@ public class SscsCaseValidatorTest {
         appellant.getContact().setMobile("07776157");
         appellant.setAppointee(buildAppointeeWithMobileNumber("07776156"));
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithBenefitType("Bla", appellant, FormType.SSCS1PE), false);
+            buildMinimumAppealDataWithBenefitType("Bla", appellant, true, FormType.SSCS1PE), false);
 
         assertEquals("person1_mobile is invalid", response.getErrors().get(0));
         assertEquals("person2_mobile is invalid", response.getErrors().get(1));
@@ -1420,9 +1199,9 @@ public class SscsCaseValidatorTest {
     @Test
     public void givenAnAppealContainsAnInvalidAppellantMobileNumberGreaterThan11Digits_thenAddAnError() {
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithBenefitType("Bla", buildAppellantWithMobileNumber("077761560000"), FormType.SSCS1PE), false);
+            buildMinimumAppealDataWithBenefitType("Bla", buildAppellantWithMobileNumber("077761560000"), true, FormType.SSCS1PE), false);
 
-        assertEquals("person1_mobile is invalid", response.getErrors().getFirst());
+        assertEquals("person1_mobile is invalid", response.getErrors().get(0));
     }
 
     @Test
@@ -1432,9 +1211,9 @@ public class SscsCaseValidatorTest {
         representative.getContact().setMobile("0123456789000");
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative), false);
+            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative, true, FormType.SSCS1PE), false);
 
-        assertEquals("representative_mobile is invalid", response.getErrors().getFirst());
+        assertEquals("representative_mobile is invalid", response.getErrors().get(0));
     }
 
     @Test
@@ -1444,9 +1223,9 @@ public class SscsCaseValidatorTest {
         representative.getName().setTitle("%54 3434 ^7*");
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative), false);
+            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative, true, FormType.SSCS1PE), false);
 
-        assertEquals("representative_title is invalid", response.getWarnings().getFirst());
+        assertEquals("representative_title is invalid", response.getWarnings().get(0));
     }
 
     @Test
@@ -1457,7 +1236,7 @@ public class SscsCaseValidatorTest {
         representative.getName().setTitle(title);
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative), false);
+            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative, true, FormType.SSCS1PE), false);
 
         assertEquals(0, response.getWarnings().size());
         assertEquals(0, response.getErrors().size());
@@ -1469,9 +1248,9 @@ public class SscsCaseValidatorTest {
         appellant.getContact().setMobile(VALID_MOBILE);
         appellant.setAppointee(buildAppointeeWithMobileNumber("077761560000"));
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithBenefitType("Bla", appellant, FormType.SSCS1PE), false);
+            buildMinimumAppealDataWithBenefitType("Bla", appellant, true, FormType.SSCS1PE), false);
 
-        assertEquals("person1_mobile is invalid", response.getErrors().getFirst());
+        assertEquals("person1_mobile is invalid", response.getErrors().get(0));
     }
 
     @Test
@@ -1480,7 +1259,7 @@ public class SscsCaseValidatorTest {
         appellant.getContact().setMobile("077761560000");
         appellant.setAppointee(buildAppointeeWithMobileNumber("077761560000"));
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithBenefitType("Bla", appellant, FormType.SSCS1PE), false);
+            buildMinimumAppealDataWithBenefitType("Bla", appellant, true, FormType.SSCS1PE), false);
 
         assertEquals("person1_mobile is invalid", response.getErrors().get(0));
         assertEquals("person2_mobile is invalid", response.getErrors().get(1));
@@ -1489,7 +1268,7 @@ public class SscsCaseValidatorTest {
     @Test
     public void givenAnAppealContainsAValidAppellantMobileNumber_thenDoNotAddAWarning() {
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithBenefitType(PIP.name(), buildAppellantWithMobileNumber(VALID_MOBILE), FormType.SSCS1PE),
+            buildMinimumAppealDataWithBenefitType(PIP.name(), buildAppellantWithMobileNumber(VALID_MOBILE), true, FormType.SSCS1PE),
             false);
 
         assertEquals(VALID_MOBILE,
@@ -1502,18 +1281,18 @@ public class SscsCaseValidatorTest {
     public void givenAnAppealContainsAnInvalidPostcode_thenAddAnError() {
         given(postcodeValidator.isValidPostcodeFormat(anyString())).willReturn(false);
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithBenefitType("Bla", buildAppellantWithPostcode("Bla Bla"), FormType.SSCS1PE), false);
+            buildMinimumAppealDataWithBenefitType("Bla", buildAppellantWithPostcode("Bla Bla"), true, FormType.SSCS1PE), false);
 
-        assertEquals("person1_postcode is not in a valid format", response.getErrors().getFirst());
+        assertEquals("person1_postcode is not in a valid format", response.getErrors().get(0));
     }
 
     @Test
     public void givenAnAppealContainsAnValidPostcodeFormatButNotFound_thenAddWarning() {
         given(postcodeValidator.isValidPostcodeFormat(anyString())).willReturn(true);
         given(postcodeValidator.isValid(anyString())).willReturn(false);
-        CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealDataWithBenefitType(PIP.name(), buildAppellantWithPostcode("W1 1LA"), FormType.SSCS1PE), false);
+        CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealDataWithBenefitType(PIP.name(), buildAppellantWithPostcode("W1 1LA"), true, FormType.SSCS1PE), false);
 
-        assertEquals("person1_postcode is not a valid postcode", response.getWarnings().getFirst());
+        assertEquals("person1_postcode is not a valid postcode", response.getWarnings().get(0));
     }
 
     @Test
@@ -1521,7 +1300,7 @@ public class SscsCaseValidatorTest {
         given(postcodeValidator.isValidPostcodeFormat(anyString())).willReturn(true);
         given(postcodeValidator.isValid(anyString())).willReturn(true);
         given(regionalProcessingCenterService.getByPostcode(anyString(), eq(false))).willReturn(RegionalProcessingCenter.builder().address1("Address 1").name("Liverpool").build());
-        CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealDataWithBenefitType(PIP.name(), buildAppellantWithPostcode("W1 1LA"), FormType.SSCS1PE), false);
+        CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealDataWithBenefitType(PIP.name(), buildAppellantWithPostcode("W1 1LA"), true, FormType.SSCS1PE), false);
 
         assertThat(response.getWarnings().size()).isEqualTo(0);
         assertThat(response.getErrors().size()).isEqualTo(0);
@@ -1529,21 +1308,20 @@ public class SscsCaseValidatorTest {
 
     @Test
     public void givenAnIbcAppealContainsAnValidPostcodeFormatButFound_thenNoErrorOrWarnings() {
-        ocrCaseData.put(IBC_ROLE_FOR_SELF, true);
         given(postcodeValidator.isValidPostcodeFormat(anyString())).willReturn(true);
         given(postcodeValidator.isValid(anyString())).willReturn(true);
+
         given(regionalProcessingCenterService.getByPostcode(anyString(), eq(true))).willReturn(RegionalProcessingCenter.builder().address1("Address 1").name("Liverpool").build());
-        CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealDataWithBenefitType(INFECTED_BLOOD_COMPENSATION.getShortName(), buildAppellantWithPostcode("W1 1LA"), FormType.SSCS8), false);
+        CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealDataWithBenefitType(INFECTED_BLOOD_COMPENSATION.getShortName(), buildAppellantWithPostcode("W1 1LA"), true, FormType.SSCS1PE), false);
 
         assertThat(response.getWarnings().size()).isEqualTo(0);
         assertThat(response.getErrors().size()).isEqualTo(0);
-        ocrCaseData.remove(IBC_ROLE_FOR_SELF);
     }
 
     @Test
     public void givenAnAppealContainsAValidPostcode_thenDoNotAddAWarning() {
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithBenefitType(PIP.name(), buildAppellantWithPostcode(VALID_POSTCODE), FormType.SSCS1PE), false);
+            buildMinimumAppealDataWithBenefitType(PIP.name(), buildAppellantWithPostcode(VALID_POSTCODE), true, FormType.SSCS1PE), false);
 
         assertEquals(VALID_POSTCODE,
             ((Appeal) response.getTransformedCase().get("appeal")).getAppellant().getAddress().getPostcode());
@@ -1560,11 +1338,11 @@ public class SscsCaseValidatorTest {
         representative.setOrganisation(null);
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative), false);
+            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative, true, FormType.SSCS1PE), false);
 
         assertEquals(
             "representative_company, representative_first_name and representative_last_name are empty. At least one must be populated",
-            response.getWarnings().getFirst());
+            response.getWarnings().get(0));
     }
 
     @Test
@@ -1575,7 +1353,7 @@ public class SscsCaseValidatorTest {
         representative.setOrganisation(null);
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative), false);
+            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative, true, FormType.SSCS1PE), false);
 
         assertEquals(0, response.getWarnings().size());
         assertEquals(0, response.getErrors().size());
@@ -1589,7 +1367,7 @@ public class SscsCaseValidatorTest {
         representative.setOrganisation(null);
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative), false);
+            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative, true, FormType.SSCS1PE), false);
 
         assertEquals(0, response.getWarnings().size());
         assertEquals(0, response.getErrors().size());
@@ -1603,11 +1381,11 @@ public class SscsCaseValidatorTest {
         representative.setOrganisation(null);
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative), false);
+            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative, true, FormType.SSCS1PE), false);
 
         assertEquals(
             "representative_company, representative_first_name and representative_last_name are empty. At least one must be populated",
-            response.getWarnings().getFirst());
+            response.getWarnings().get(0));
     }
 
     @Test
@@ -1618,7 +1396,7 @@ public class SscsCaseValidatorTest {
         representative.getName().setTitle(null);
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative), false);
+            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative, true, FormType.SSCS1PE), false);
 
         assertEquals(0, response.getWarnings().size());
         assertEquals(0, response.getErrors().size());
@@ -1630,9 +1408,9 @@ public class SscsCaseValidatorTest {
         representative.getAddress().setLine1(null);
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative), false);
+            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative, true, FormType.SSCS1PE), false);
 
-        assertEquals("representative_address_line1 is empty", response.getWarnings().getFirst());
+        assertEquals("representative_address_line1 is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -1642,9 +1420,9 @@ public class SscsCaseValidatorTest {
         representative.getAddress().setTown(null);
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative), false);
+            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative, true, FormType.SSCS1PE), false);
 
-        assertEquals("representative_address_line3 is empty", response.getWarnings().getFirst());
+        assertEquals("representative_address_line3 is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -1654,9 +1432,9 @@ public class SscsCaseValidatorTest {
         representative.getAddress().setCounty(null);
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative), false);
+            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative, true, FormType.SSCS1PE), false);
 
-        assertEquals("representative_address_line4 is empty", response.getWarnings().getFirst());
+        assertEquals("representative_address_line4 is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -1667,9 +1445,9 @@ public class SscsCaseValidatorTest {
         representative.getAddress().setCounty(null);
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative), false);
+            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative, true, FormType.SSCS1PE), false);
 
-        assertEquals("representative_address_line3 is empty", response.getWarnings().getFirst());
+        assertEquals("representative_address_line3 is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -1678,19 +1456,20 @@ public class SscsCaseValidatorTest {
         representative.getAddress().setPostcode(null);
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative), false);
+            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative, true, FormType.SSCS1PE), false);
 
-        assertEquals("representative_postcode is empty", response.getWarnings().getFirst());
+        assertEquals("representative_postcode is empty", response.getWarnings().get(0));
     }
 
     @Test
     public void givenANullRepresentative_thenAddAnError() {
+        Representative representative = null;
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithRepresentative(buildAppellant(false), null), false);
+            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative, true, FormType.SSCS1PE), false);
 
         assertEquals(1, response.getErrors().size());
         assertEquals("The \"Has representative\" field is not selected, please select an option to proceed",
-            response.getErrors().getFirst());
+            response.getErrors().get(0));
     }
 
     @Test
@@ -1698,10 +1477,10 @@ public class SscsCaseValidatorTest {
         Representative representative = buildRepresentative();
         representative.setHasRepresentative(null);
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative), false);
+            buildMinimumAppealDataWithRepresentative(buildAppellant(false), representative, true, FormType.SSCS1PE), false);
 
         assertEquals(1, response.getErrors().size());
-        assertEquals(HAS_REPRESENTATIVE_FIELD_MISSING, response.getErrors().getFirst());
+        assertEquals(HAS_REPRESENTATIVE_FIELD_MISSING, response.getErrors().get(0));
     }
 
     @Test
@@ -1713,7 +1492,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_title is empty", response.getWarnings().getFirst());
+        assertEquals("person1_title is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -1725,7 +1504,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_first_name is empty", response.getWarnings().getFirst());
+        assertEquals("person1_first_name is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -1737,7 +1516,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_last_name is empty", response.getWarnings().getFirst());
+        assertEquals("person1_last_name is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -1749,7 +1528,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_address_line1 is empty", response.getWarnings().getFirst());
+        assertEquals("person1_address_line1 is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -1762,7 +1541,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_address_line3 is empty", response.getWarnings().getFirst());
+        assertEquals("person1_address_line3 is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -1777,7 +1556,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_address_line2 is empty", response.getWarnings().getFirst());
+        assertEquals("person1_address_line2 is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -1790,7 +1569,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_address_line4 is empty", response.getWarnings().getFirst());
+        assertEquals("person1_address_line4 is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -1805,7 +1584,7 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_address_line3 is empty", response.getWarnings().getFirst());
+        assertEquals("person1_address_line3 is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -1817,15 +1596,15 @@ public class SscsCaseValidatorTest {
             .validateExceptionRecord(transformResponse, exceptionRecord, buildMinimumAppealData(appellant, true, FormType.SSCS1PE),
                 false);
 
-        assertEquals("person1_postcode is empty", response.getWarnings().getFirst());
+        assertEquals("person1_postcode is empty", response.getWarnings().get(0));
     }
 
     @Test
     public void givenAnAppealWithNoHearingType_thenAddAWarning() {
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithHearingType(null, buildAppellant(false), true), false);
+            buildMinimumAppealDataWithHearingType(null, buildAppellant(false), true, FormType.SSCS1PE), false);
 
-        assertEquals("is_hearing_type_oral and/or is_hearing_type_paper is invalid", response.getWarnings().getFirst());
+        assertEquals("is_hearing_type_oral and/or is_hearing_type_paper is invalid", response.getWarnings().get(0));
     }
 
     @Test
@@ -1843,7 +1622,7 @@ public class SscsCaseValidatorTest {
 
         pairs.put("sscsDocument", buildDocument("myfile.pdf"));
 
-        CaseResponse response = validator.validateValidationRecord(pairs, true, false);
+        CaseResponse response = validator.validateValidationRecord(pairs, true);
 
         assertEquals(0, response.getErrors().size());
     }
@@ -1854,11 +1633,11 @@ public class SscsCaseValidatorTest {
 
         pairs.put("sscsDocument", buildDocument(null));
 
-        CaseResponse response = validator.validateValidationRecord(pairs, true, false);
+        CaseResponse response = validator.validateValidationRecord(pairs, true);
 
         assertEquals(
             "There is a file attached to the case that does not have a filename, add a filename, e.g. filename.pdf",
-            response.getErrors().getFirst());
+            response.getErrors().get(0));
     }
 
     @Test
@@ -1867,11 +1646,11 @@ public class SscsCaseValidatorTest {
 
         pairs.put("sscsDocument", buildDocument("Waiver"));
 
-        CaseResponse response = validator.validateValidationRecord(pairs, true, false);
+        CaseResponse response = validator.validateValidationRecord(pairs, true);
 
         assertEquals(
             "There is a file attached to the case called Waiver, filenames must have extension, e.g. filename.pdf",
-            response.getErrors().getFirst());
+            response.getErrors().get(0));
     }
 
     @Test
@@ -1880,9 +1659,9 @@ public class SscsCaseValidatorTest {
         Appellant appellant = buildAppellant(false);
         appellant.getAddress().setPostcode(null);
 
-        CaseResponse response = validator.validateValidationRecord(buildMinimumAppealData(appellant, false, FormType.SSCS1PE), false, false);
+        CaseResponse response = validator.validateValidationRecord(buildMinimumAppealData(appellant, false, FormType.SSCS1PE), false);
 
-        assertEquals("Appellant postcode is empty", response.getWarnings().getFirst());
+        assertEquals("Appellant postcode is empty", response.getWarnings().get(0));
         verifyNoInteractions(regionalProcessingCenterService);
     }
 
@@ -1893,7 +1672,7 @@ public class SscsCaseValidatorTest {
             buildMinimumAppealDataWithMrn(MrnDetails.builder().dwpIssuingOffice("Sheffield DRT").build(),
                 buildAppellant(false), false, FormType.SSCS1PE);
 
-        CaseResponse response = validator.validateValidationRecord(pairs, true, false);
+        CaseResponse response = validator.validateValidationRecord(pairs, true);
 
         assertEquals(0, response.getWarnings().size());
         assertEquals(0, response.getErrors().size());
@@ -1906,15 +1685,15 @@ public class SscsCaseValidatorTest {
             buildMinimumAppealDataWithMrn(MrnDetails.builder().dwpIssuingOffice("Sheffield DRT").build(),
                 buildAppellant(false), false, FormType.SSCS1PE);
 
-        CaseResponse response = validator.validateValidationRecord(pairs, false, false);
+        CaseResponse response = validator.validateValidationRecord(pairs, false);
 
-        assertEquals("Mrn date is empty", response.getWarnings().getFirst());
+        assertEquals("Mrn date is empty", response.getWarnings().get(0));
     }
 
     @Test
     public void givenAnAppealWithAnErrorAndCombineWarningsTrue_thenMoveErrorsToWarnings() {
         CaseResponse response = validator.validateExceptionRecord(transformResponse, exceptionRecord,
-            buildMinimumAppealDataWithBenefitType("Bla", buildAppellantWithMobileNumber("07776156"), FormType.SSCS1PE), true);
+            buildMinimumAppealDataWithBenefitType("Bla", buildAppellantWithMobileNumber("07776156"), true, FormType.SSCS1PE), true);
 
         assertEquals("person1_mobile is invalid", response.getWarnings().get(1));
         assertEquals(0, response.getErrors().size());
@@ -1941,7 +1720,7 @@ public class SscsCaseValidatorTest {
 
         assertEquals(
             "Telephone hearing selected but the number used is invalid. Please check either the hearing_telephone_number or person1_phone fields",
-            response.getWarnings().getFirst());
+            response.getWarnings().get(0));
         assertEquals(0, response.getErrors().size());
     }
 
@@ -1951,11 +1730,11 @@ public class SscsCaseValidatorTest {
             HearingSubtype.builder().wantsHearingTypeTelephone("Yes").hearingTelephoneNumber("01222").build(),
             buildAppellant(false), false, FormType.SSCS1PE);
 
-        CaseResponse response = validator.validateValidationRecord(pairs, true, false);
+        CaseResponse response = validator.validateValidationRecord(pairs, true);
 
         assertEquals(
             "Telephone hearing selected but the number used is invalid. Please check either the telephone or hearing telephone number fields",
-            response.getWarnings().getFirst());
+            response.getWarnings().get(0));
         assertEquals(0, response.getErrors().size());
     }
 
@@ -1968,7 +1747,7 @@ public class SscsCaseValidatorTest {
             buildMinimumAppealDataWithHearingSubtype(hearingSubtype, buildAppellant(false), true, FormType.SSCS1PE), false);
 
         assertEquals("hearing_telephone_number has not been provided but data indicates hearing telephone is required",
-            response.getWarnings().getFirst());
+            response.getWarnings().get(0));
         assertEquals(0, response.getErrors().size());
     }
 
@@ -1978,10 +1757,10 @@ public class SscsCaseValidatorTest {
             HearingSubtype.builder().wantsHearingTypeTelephone("Yes").hearingTelephoneNumber(null).build(),
             buildAppellant(false), false, FormType.SSCS1PE);
 
-        CaseResponse response = validator.validateValidationRecord(pairs, true, false);
+        CaseResponse response = validator.validateValidationRecord(pairs, true);
 
         assertEquals("Hearing telephone number has not been provided but data indicates hearing telephone is required",
-            response.getWarnings().getFirst());
+            response.getWarnings().get(0));
         assertEquals(0, response.getErrors().size());
     }
 
@@ -1994,7 +1773,7 @@ public class SscsCaseValidatorTest {
             buildMinimumAppealDataWithHearingSubtype(hearingSubtype, buildAppellant(false), true, FormType.SSCS1PE), false);
 
         assertEquals("hearing_video_email has not been provided but data indicates hearing video is required",
-            response.getWarnings().getFirst());
+            response.getWarnings().get(0));
         assertEquals(0, response.getErrors().size());
     }
 
@@ -2004,18 +1783,18 @@ public class SscsCaseValidatorTest {
             HearingSubtype.builder().wantsHearingTypeVideo("Yes").hearingVideoEmail(null).build(),
             buildAppellant(false), false, FormType.SSCS1PE);
 
-        CaseResponse response = validator.validateValidationRecord(pairs, true, false);
+        CaseResponse response = validator.validateValidationRecord(pairs, true);
 
         assertEquals("Hearing video email address has not been provided but data indicates hearing video is required",
-            response.getWarnings().getFirst());
+            response.getWarnings().get(0));
         assertEquals(0, response.getErrors().size());
     }
 
     @Test
     public void givenAnAppealWithAnHearingTypePaperAndEmptyHearingSubTypeForSscsCase_thenNoWarning() {
         Map<String, Object> pairs =
-            buildMinimumAppealDataWithHearingType(HEARING_TYPE_PAPER, buildAppellant(false), false);
-        CaseResponse response = validator.validateValidationRecord(pairs, true, false);
+            buildMinimumAppealDataWithHearingType(HEARING_TYPE_PAPER, buildAppellant(false), false, FormType.SSCS1PE);
+        CaseResponse response = validator.validateValidationRecord(pairs, true);
         assertEquals(0, response.getWarnings().size());
     }
 
@@ -2028,17 +1807,17 @@ public class SscsCaseValidatorTest {
             pairs.put("childMaintenanceNumber", "123456");
         }
         pairs.put("formType", formType);
-        CaseResponse response = validator.validateValidationRecord(pairs, true, false);
+        CaseResponse response = validator.validateValidationRecord(pairs, true);
         assertEquals(1, response.getWarnings().size());
         assertEquals("Hearing option telephone, video and face to face are empty. At least one must be populated",
-            response.getWarnings().getFirst());
+            response.getWarnings().get(0));
     }
 
     @Test
     public void givenAnAppealWithAnEmptyHearingSubTypeForSscsCase_thenNoWarning() {
         Map<String, Object> pairs = buildMinimumAppealDataWithHearingSubtype(HearingSubtype.builder().build(), buildAppellant(false), false, FormType.SSCS1PE);
         pairs.put("formType", FormType.SSCS1);
-        CaseResponse response = validator.validateValidationRecord(pairs, true, false);
+        CaseResponse response = validator.validateValidationRecord(pairs, true);
         assertEquals(0, response.getWarnings().size());
     }
 
@@ -2047,7 +1826,7 @@ public class SscsCaseValidatorTest {
         Map<String, Object> pairs =
             buildMinimumAppealDataWithHearingSubtype(HearingSubtype.builder().build(), buildAppellant(false), false, FormType.SSCS1PE);
         pairs.put("formType", null);
-        CaseResponse response = validator.validateValidationRecord(pairs, true, false);
+        CaseResponse response = validator.validateValidationRecord(pairs, true);
         assertEquals(0, response.getWarnings().size());
     }
 
@@ -2056,7 +1835,7 @@ public class SscsCaseValidatorTest {
         Map<String, Object> pairs = buildMinimumAppealDataWithHearingSubtype(
             HearingSubtype.builder().wantsHearingTypeVideo("Yes").hearingVideoEmail("m@m.com").build(),
             buildAppellant(false), false, FormType.SSCS1PE);
-        CaseResponse response = validator.validateValidationRecord(pairs, true, false);
+        CaseResponse response = validator.validateValidationRecord(pairs, true);
         assertEquals(0, response.getWarnings().size());
     }
 
@@ -2065,14 +1844,14 @@ public class SscsCaseValidatorTest {
         Map<String, Object> pairs =
             buildMinimumAppealDataWithHearingSubtype(HearingSubtype.builder().wantsHearingTypeFaceToFace("Yes").build(),
                 buildAppellant(false), false, FormType.SSCS1PE);
-        CaseResponse response = validator.validateValidationRecord(pairs, true, false);
+        CaseResponse response = validator.validateValidationRecord(pairs, true);
         assertEquals(0, response.getWarnings().size());
     }
 
     @Test
     public void givenSscs2FormWithoutChildMaintenance_thenAddAWarning() {
 
-        Map<String, Object> caseData = buildMinimumAppealDataWithBenefitTypeAndFormType(CHILD_SUPPORT.getShortName(), buildAppellant(false), FormType.SSCS2);
+        Map<String, Object> caseData = buildMinimumAppealDataWithBenefitTypeAndFormType(CHILD_SUPPORT.getShortName(), buildAppellant(false), true, FormType.SSCS2);
         caseData.remove("childMaintenanceNumber");
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
@@ -2080,14 +1859,14 @@ public class SscsCaseValidatorTest {
             caseData,
             false);
 
-        assertEquals("person1_child_maintenance_number is empty", response.getWarnings().getFirst());
+        assertEquals("person1_child_maintenance_number is empty", response.getWarnings().get(0));
     }
 
     @Test
     public void givenSscs2FormWithChildMaintenance_thenAppellantShouldReturnValue() {
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
-            exceptionRecordSscs2, buildCaseWithChildMaintenanceWithOtherPartyNameAddress(CHILD_MAINTENANCE_NUMBER, OTHER_PARTY_ADDRESS_LINE1, OTHER_PARTY_ADDRESS_LINE2, OTHER_PARTY_ADDRESS_LINE3, OTHER_PARTY_POSTCODE, buildOtherPartyName()), false);
+            exceptionRecordSscs2, buildCaseWithChildMaintenanceWithOtherPartyNameAddress(CHILD_MAINTENANCE_NUMBER,OTHER_PARTY_ADDRESS_LINE1, OTHER_PARTY_ADDRESS_LINE2,OTHER_PARTY_ADDRESS_LINE3, OTHER_PARTY_POSTCODE, buildOtherPartyName()), false);
 
         assertEquals(0, response.getWarnings().size());
         assertEquals(CHILD_MAINTENANCE_NUMBER, response.getTransformedCase().get("childMaintenanceNumber"));
@@ -2104,19 +1883,19 @@ public class SscsCaseValidatorTest {
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecordSscs2,
-            buildCaseWithChildMaintenanceWithOtherPartyNameAddress(CHILD_MAINTENANCE_NUMBER, line1, line2, line3, postcode, buildOtherPartyName()),
+            buildCaseWithChildMaintenanceWithOtherPartyNameAddress(CHILD_MAINTENANCE_NUMBER,line1, line2,line3, postcode, buildOtherPartyName()),
             false);
 
         assertFalse(response.getWarnings().isEmpty());
         assertEquals(size, response.getWarnings().size());
-        assertEquals(warning, response.getWarnings().getFirst());
+        assertEquals(warning, response.getWarnings().get(0));
     }
 
     @Test
     public void givenOtherParty_WithFirstNameLastNamePopulated_WithNoAddress_noWarnings() {
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecord,
-            buildCaseWithChildMaintenanceWithOtherPartyNameAddress(CHILD_MAINTENANCE_NUMBER, "", "", "", "", buildOtherPartyName()),
+            buildCaseWithChildMaintenanceWithOtherPartyNameAddress(CHILD_MAINTENANCE_NUMBER,"", "","", "", buildOtherPartyName()),
             false);
         assertTrue(response.getWarnings().isEmpty());
     }
@@ -2125,7 +1904,7 @@ public class SscsCaseValidatorTest {
     public void givenOtherParty_WithNoName_WithNoAddress_noWarnings() {
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecord,
-            buildCaseWithChildMaintenanceWithOtherPartyNameAddress(CHILD_MAINTENANCE_NUMBER, "", "", "", "", Name.builder().build()),
+            buildCaseWithChildMaintenanceWithOtherPartyNameAddress(CHILD_MAINTENANCE_NUMBER,"", "","", "", Name.builder().build()),
             false);
         assertTrue(response.getWarnings().isEmpty());
     }
@@ -2134,7 +1913,7 @@ public class SscsCaseValidatorTest {
     public void givenOtherParty_NoName_WithAddressPresent_WarningSeen() {
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecord,
-            buildCaseWithChildMaintenanceWithOtherPartyNameAddress(CHILD_MAINTENANCE_NUMBER, "line1", "", "line3", "W1", Name.builder().build()),
+            buildCaseWithChildMaintenanceWithOtherPartyNameAddress(CHILD_MAINTENANCE_NUMBER,"line1", "","line3", "W1", Name.builder().build()),
             false);
         assertFalse(response.getWarnings().isEmpty());
     }
@@ -2145,7 +1924,7 @@ public class SscsCaseValidatorTest {
         Name name = Name.builder().firstName(isFirstnameBlank ? "" : "fn").lastName(!isFirstnameBlank ? "" : "ln").build();
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecord,
-            buildCaseWithChildMaintenanceWithOtherPartyNameAddress(CHILD_MAINTENANCE_NUMBER, "line1", "line2", "line3", "W1", name),
+            buildCaseWithChildMaintenanceWithOtherPartyNameAddress(CHILD_MAINTENANCE_NUMBER,"line1", "line2","line3", "W1", name),
             false);
         assertFalse(response.getWarnings().isEmpty());
         assertEquals(1, response.getWarnings().size());
@@ -2157,7 +1936,7 @@ public class SscsCaseValidatorTest {
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecord,
             buildCaseWithChildMaintenanceWithOtherPartyNameAddress(
-                CHILD_MAINTENANCE_NUMBER, OTHER_PARTY_ADDRESS_LINE1, OTHER_PARTY_ADDRESS_LINE2, OTHER_PARTY_ADDRESS_LINE3, OTHER_PARTY_POSTCODE, buildOtherPartyName()),
+                CHILD_MAINTENANCE_NUMBER,OTHER_PARTY_ADDRESS_LINE1, OTHER_PARTY_ADDRESS_LINE2,OTHER_PARTY_ADDRESS_LINE3, OTHER_PARTY_POSTCODE, buildOtherPartyName()),
             false);
 
         assertTrue(response.getWarnings().isEmpty());
@@ -2171,11 +1950,11 @@ public class SscsCaseValidatorTest {
         otherPartyName.setLastName(null);
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecordSscs2, buildCaseWithChildMaintenanceWithOtherPartyNameAddress(
-                CHILD_MAINTENANCE_NUMBER, OTHER_PARTY_ADDRESS_LINE1, OTHER_PARTY_ADDRESS_LINE2, OTHER_PARTY_ADDRESS_LINE3, OTHER_PARTY_POSTCODE, otherPartyName),
+                CHILD_MAINTENANCE_NUMBER,OTHER_PARTY_ADDRESS_LINE1, OTHER_PARTY_ADDRESS_LINE2,OTHER_PARTY_ADDRESS_LINE3, OTHER_PARTY_POSTCODE, otherPartyName),
             false);
 
         assertEquals(1, response.getWarnings().size());
-        assertEquals("other_party_last_name is empty", response.getWarnings().getFirst());
+        assertEquals("other_party_last_name is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -2184,11 +1963,11 @@ public class SscsCaseValidatorTest {
         otherPartyName.setFirstName(null);
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecordSscs2, buildCaseWithChildMaintenanceWithOtherPartyNameAddress(
-                CHILD_MAINTENANCE_NUMBER, OTHER_PARTY_ADDRESS_LINE1, OTHER_PARTY_ADDRESS_LINE2, OTHER_PARTY_ADDRESS_LINE3, OTHER_PARTY_POSTCODE, otherPartyName),
+                CHILD_MAINTENANCE_NUMBER,OTHER_PARTY_ADDRESS_LINE1, OTHER_PARTY_ADDRESS_LINE2,OTHER_PARTY_ADDRESS_LINE3, OTHER_PARTY_POSTCODE, otherPartyName),
             false);
 
         assertEquals(1, response.getWarnings().size());
-        assertEquals("other_party_first_name is empty", response.getWarnings().getFirst());
+        assertEquals("other_party_first_name is empty", response.getWarnings().get(0));
     }
 
     @Test
@@ -2197,11 +1976,11 @@ public class SscsCaseValidatorTest {
         otherPartyName.setTitle("Random");
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecordSscs2, buildCaseWithChildMaintenanceWithOtherPartyNameAddress(
-                CHILD_MAINTENANCE_NUMBER, OTHER_PARTY_ADDRESS_LINE1, OTHER_PARTY_ADDRESS_LINE2, OTHER_PARTY_ADDRESS_LINE3, OTHER_PARTY_POSTCODE, otherPartyName),
+                CHILD_MAINTENANCE_NUMBER,OTHER_PARTY_ADDRESS_LINE1, OTHER_PARTY_ADDRESS_LINE2,OTHER_PARTY_ADDRESS_LINE3, OTHER_PARTY_POSTCODE, otherPartyName),
             false);
 
         assertEquals(1, response.getWarnings().size());
-        assertEquals("other_party_title is invalid", response.getWarnings().getFirst());
+        assertEquals("other_party_title is invalid", response.getWarnings().get(0));
     }
 
     @Test
@@ -2215,7 +1994,7 @@ public class SscsCaseValidatorTest {
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecordSscs2, buildCaseWithChildMaintenanceWithOtherPartyNameAddress(
-                CHILD_MAINTENANCE_NUMBER, OTHER_PARTY_ADDRESS_LINE1, OTHER_PARTY_ADDRESS_LINE2, null, OTHER_PARTY_POSTCODE, otherPartyName),
+                CHILD_MAINTENANCE_NUMBER,OTHER_PARTY_ADDRESS_LINE1, OTHER_PARTY_ADDRESS_LINE2,null, OTHER_PARTY_POSTCODE, otherPartyName),
             false);
 
         assertEquals(0, response.getWarnings().size());
@@ -2231,7 +2010,7 @@ public class SscsCaseValidatorTest {
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecordSscs2, buildCaseWithChildMaintenanceWithOtherPartyNameAddress(null,
-                OTHER_PARTY_ADDRESS_LINE1, OTHER_PARTY_ADDRESS_LINE2, null, OTHER_PARTY_POSTCODE,
+                OTHER_PARTY_ADDRESS_LINE1, OTHER_PARTY_ADDRESS_LINE2,null, OTHER_PARTY_POSTCODE,
                 buildOtherPartyName()), false);
 
         assertEquals(0, response.getWarnings().size());
@@ -2247,11 +2026,11 @@ public class SscsCaseValidatorTest {
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecordSscs2, buildCaseWithChildMaintenanceWithOtherPartyNameAddress(null,
-                OTHER_PARTY_ADDRESS_LINE1, OTHER_PARTY_ADDRESS_LINE2, null, OTHER_PARTY_POSTCODE,
+                OTHER_PARTY_ADDRESS_LINE1, OTHER_PARTY_ADDRESS_LINE2,null, OTHER_PARTY_POSTCODE,
                 buildOtherPartyName()), false);
 
         assertEquals(1, response.getWarnings().size());
-        assertEquals("person1_child_maintenance_number is empty", response.getWarnings().getFirst());
+        assertEquals("person1_child_maintenance_number is empty", response.getWarnings().get(0));
     }
 
 
@@ -2266,7 +2045,7 @@ public class SscsCaseValidatorTest {
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecordSscs2, buildCaseWithChildMaintenanceWithOtherPartyNameAddress(
-                CHILD_MAINTENANCE_NUMBER, OTHER_PARTY_ADDRESS_LINE1, OTHER_PARTY_ADDRESS_LINE2, OTHER_PARTY_ADDRESS_LINE3, OTHER_PARTY_POSTCODE, otherPartyName),
+                CHILD_MAINTENANCE_NUMBER,OTHER_PARTY_ADDRESS_LINE1, OTHER_PARTY_ADDRESS_LINE2,OTHER_PARTY_ADDRESS_LINE3, OTHER_PARTY_POSTCODE, otherPartyName),
             false);
 
         assertEquals(0, response.getWarnings().size());
@@ -2285,14 +2064,14 @@ public class SscsCaseValidatorTest {
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecordSscs2, buildCaseWithChildMaintenanceWithOtherPartyNameAddress(
-                CHILD_MAINTENANCE_NUMBER, OTHER_PARTY_ADDRESS_LINE1, OTHER_PARTY_ADDRESS_LINE2, OTHER_PARTY_ADDRESS_LINE3, OTHER_PARTY_POSTCODE, otherPartyName),
+                CHILD_MAINTENANCE_NUMBER,OTHER_PARTY_ADDRESS_LINE1, OTHER_PARTY_ADDRESS_LINE2,OTHER_PARTY_ADDRESS_LINE3, OTHER_PARTY_POSTCODE, otherPartyName),
             false);
 
         assertEquals(0, response.getWarnings().size());
-        assertEquals("Jerry Fisher", ((List<CcdValue<OtherParty>>) response.getTransformedCase().get("otherParties")).getFirst().getValue().getName().getFullNameNoTitle());
+        assertEquals("Jerry Fisher", ((List<CcdValue<OtherParty>>) response.getTransformedCase().get("otherParties")).get(0).getValue().getName().getFullNameNoTitle());
         @SuppressWarnings("unchecked")
         List<CcdValue<OtherParty>> otherParties = ((List<CcdValue<OtherParty>>) response.getTransformedCase().get("otherParties"));
-        assertNotNull(otherParties.getFirst().getValue().getAddress());
+        assertNotNull(otherParties.get(0).getValue().getAddress());
     }
 
     @Test
@@ -2306,11 +2085,11 @@ public class SscsCaseValidatorTest {
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecordSscs2, buildCaseWithChildMaintenanceWithOtherPartyNameAddress(
-                CHILD_MAINTENANCE_NUMBER, OTHER_PARTY_ADDRESS_LINE1, OTHER_PARTY_ADDRESS_LINE2, OTHER_PARTY_ADDRESS_LINE3, OTHER_PARTY_POSTCODE, otherPartyName),
+                CHILD_MAINTENANCE_NUMBER,OTHER_PARTY_ADDRESS_LINE1, OTHER_PARTY_ADDRESS_LINE2,OTHER_PARTY_ADDRESS_LINE3, OTHER_PARTY_POSTCODE, otherPartyName),
             false);
 
         assertEquals(0, response.getWarnings().size());
-        assertEquals("Mr Jerry Fisher", ((List<CcdValue<OtherParty>>) response.getTransformedCase().get("otherParties")).getFirst().getValue().getName().getFullName());
+        assertEquals("Mr Jerry Fisher", ((List<CcdValue<OtherParty>>) response.getTransformedCase().get("otherParties")).get(0).getValue().getName().getFullName());
     }
 
     @Test
@@ -2326,15 +2105,15 @@ public class SscsCaseValidatorTest {
 
         CaseResponse response = validator.validateExceptionRecord(transformResponse,
             exceptionRecordSscs2, buildCaseWithChildMaintenanceWithOtherPartyNameAddress(
-                CHILD_MAINTENANCE_NUMBER, line1, line2, line3, postcode, buildOtherPartyName()),
+                CHILD_MAINTENANCE_NUMBER,line1, line2, line3, postcode, buildOtherPartyName()),
             false);
 
         assertEquals(0, response.getWarnings().size());
         @SuppressWarnings("unchecked")
         List<CcdValue<OtherParty>> otherParties = ((List<CcdValue<OtherParty>>) response.getTransformedCase().get("otherParties"));
         assertNotNull(otherParties);
-        assertNotNull(otherParties.getFirst().getValue().getName());
-        assertNull(otherParties.getFirst().getValue().getAddress());
+        assertNotNull(otherParties.get(0).getValue().getName());
+        assertNull(otherParties.get(0).getValue().getAddress());
     }
 
     private Object buildDocument(String filename) {
@@ -2362,28 +2141,34 @@ public class SscsCaseValidatorTest {
     }
 
     private Map<String, Object> buildMinimumAppealDataWithBenefitType(String benefitCode, Appellant appellant,
+                                                                      Boolean exceptionCaseType,
                                                                       FormType formType) {
         return buildMinimumAppealDataWithMrnDateAndBenefitType(defaultMrnDetails, benefitCode, appellant,
-            buildMinimumRep(), null, true, HEARING_TYPE_ORAL,
+            buildMinimumRep(), null, exceptionCaseType, HEARING_TYPE_ORAL,
             HearingSubtype.builder().wantsHearingTypeFaceToFace("Yes").build(), formType);
     }
 
     private Map<String, Object> buildMinimumAppealDataWithRepresentative(Appellant appellant,
-                                                                         Representative representative) {
+                                                                         Representative representative,
+                                                                         Boolean exceptionCaseType,
+                                                                         FormType formType) {
         return buildMinimumAppealDataWithMrnDateAndBenefitType(defaultMrnDetails, PIP.name(), appellant, representative,
-            null, true, HEARING_TYPE_ORAL,
-            HearingSubtype.builder().wantsHearingTypeFaceToFace("Yes").build(), FormType.SSCS1PE);
+            null, exceptionCaseType, HEARING_TYPE_ORAL,
+            HearingSubtype.builder().wantsHearingTypeFaceToFace("Yes").build(), formType);
     }
 
-    private Map<String, Object> buildMinimumAppealDataWithExcludedDate(Appellant appellant) {
+    private Map<String, Object> buildMinimumAppealDataWithExcludedDate(String excludedDate, Appellant appellant,
+                                                                       Boolean exceptionCaseType,
+                                                                       FormType formType) {
         return buildMinimumAppealDataWithMrnDateAndBenefitType(defaultMrnDetails, PIP.name(), appellant,
-            buildMinimumRep(), "2018-10-10", true, HEARING_TYPE_ORAL, null, FormType.SSCS1PE);
+            buildMinimumRep(), excludedDate, exceptionCaseType, HEARING_TYPE_ORAL, null, formType);
     }
 
     private Map<String, Object> buildMinimumAppealDataWithHearingType(String hearingType, Appellant appellant,
-                                                                      Boolean exceptionCaseType) {
+                                                                      Boolean exceptionCaseType,
+                                                                      FormType formType) {
         return buildMinimumAppealDataWithMrnDateAndBenefitType(defaultMrnDetails, PIP.name(), appellant,
-            buildMinimumRep(), null, exceptionCaseType, hearingType, null, FormType.SSCS1PE);
+            buildMinimumRep(), null, exceptionCaseType, hearingType, null, formType);
     }
 
     private Map<String, Object> buildMinimumAppealDataWithHearingSubtype(HearingSubtype hearingSubtype,
@@ -2400,9 +2185,10 @@ public class SscsCaseValidatorTest {
 
     private Map<String, Object> buildMinimumAppealDataWithBenefitTypeAndFormType(String benefitCode,
                                                                                  Appellant appellant,
+                                                                                 Boolean exceptionCaseType,
                                                                                  FormType formType) {
         return buildMinimumAppealDataWithMrnDateFormTypeAndBenefitType(defaultMrnDetails, benefitCode, appellant,
-            buildMinimumRep(), null, true, HEARING_TYPE_ORAL,
+            buildMinimumRep(), null, exceptionCaseType, HEARING_TYPE_ORAL,
             HearingSubtype.builder().wantsHearingTypeFaceToFace("Yes").build(), formType);
     }
 
@@ -2473,10 +2259,9 @@ public class SscsCaseValidatorTest {
             .name(Name.builder().title("Mr").firstName("Bob").lastName("Smith").build())
             .address(
                 Address.builder().line1("101 My Road").town("Brentwood").county("Essex").postcode(postcode).build())
-            .identity(Identity.builder().nino("BB000000B").ibcaReference("A12A12").build())
+            .identity(Identity.builder().nino("BB000000B").build())
             .contact(Contact.builder().mobile(mobileNumber).build())
             .appointee(appointee)
-            .ibcRole("myself")
             .role(Role.builder().name("Paying parent").build()).build();
     }
 
@@ -2498,7 +2283,7 @@ public class SscsCaseValidatorTest {
                     .address(Address.builder()
                         .line1(line1)
                         .town(line2)
-                        .county((line3 != null && !line3.isEmpty()) ? "." : line3)
+                        .county((line3 != null && !line3.equals("")) ? "." : line3)
                         .postcode(postcode)
                         .build())
                     .build())
